@@ -7,11 +7,11 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import gov.cms.bfd.model.rda.Mbi;
-import gov.cms.bfd.model.rda.PreAdjFissAuditTrail;
-import gov.cms.bfd.model.rda.PreAdjFissClaim;
-import gov.cms.bfd.model.rda.PreAdjFissDiagnosisCode;
-import gov.cms.bfd.model.rda.PreAdjFissPayer;
-import gov.cms.bfd.model.rda.PreAdjFissProcCode;
+import gov.cms.bfd.model.rda.RdaFissAuditTrail;
+import gov.cms.bfd.model.rda.RdaFissClaim;
+import gov.cms.bfd.model.rda.RdaFissDiagnosisCode;
+import gov.cms.bfd.model.rda.RdaFissPayer;
+import gov.cms.bfd.model.rda.RdaFissProcCode;
 import gov.cms.bfd.pipeline.rda.grpc.RdaChange;
 import gov.cms.bfd.pipeline.rda.grpc.sink.direct.MbiCache;
 import gov.cms.bfd.pipeline.sharedutils.IdHasher;
@@ -52,10 +52,27 @@ import java.time.Clock;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneOffset;
-import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+/**
+ * Unit tests for the {@link FissClaimTransformer}. Unless otherwise stated on a method every test
+ * verifies that one or a set of fields within a source grpc message object for a claim have been
+ * correctly transformed into appropriate values and copied into a new {@link RdaFissClaim} JPA
+ * entity object.
+ *
+ * <p>Field tests are performed using an adaptor object appropriate for each type of grpc/jpa object
+ * pair. These adaptor objects ({@link ClaimFieldTester}, {@link AuditTrailFieldTester}, {@link
+ * BeneZPayerFieldTester}, {@link InsuredPayerFieldTester}, and {@link ProcCodeFieldTester}) extend
+ * the {@link ClaimTransformerFieldTester} class and provide class specific implementations of the
+ * methods used to construct and transform objects under test.
+ *
+ * <p>Each individual field test is named after the field it tests and calls appropriate
+ * verification methods for that field. {@see ClaimTransformerFieldTester} for documentation of each
+ * of the verification methods.
+ */
 public class FissClaimTransformerTest {
   // using a fixed Clock ensures our timestamp is predictable
   private final Clock clock = Clock.fixed(Instant.ofEpochMilli(1621609413832L), ZoneOffset.UTC);
@@ -65,13 +82,13 @@ public class FissClaimTransformerTest {
       new FissClaimTransformer(clock, MbiCache.computedCache(idHasher.getConfig()));
   private FissClaimChange.Builder changeBuilder;
   private FissClaim.Builder claimBuilder;
-  private PreAdjFissClaim claim;
+  private RdaFissClaim claim;
 
   @BeforeEach
   public void setUp() {
     changeBuilder = FissClaimChange.newBuilder();
     claimBuilder = FissClaim.newBuilder();
-    claim = new PreAdjFissClaim();
+    claim = new RdaFissClaim();
     claim.setSequenceNumber(0L);
   }
 
@@ -129,7 +146,7 @@ public class FissClaimTransformerTest {
     claim.setStmtCovToDate(LocalDate.of(2021, 4, 5));
     claim.setLobCd("1");
     claim.setServTypeCd("6");
-    claim.setServTypeCdMapping(PreAdjFissClaim.ServTypeCdMapping.Clinic);
+    claim.setServTypeCdMapping(RdaFissClaim.ServTypeCdMapping.Clinic);
     claim.setFreqCd("G");
     claim.setBillTypCd("ABC");
     claim.setLastUpdated(clock.instant());
@@ -195,14 +212,14 @@ public class FissClaimTransformerTest {
     claim.setCurrLoc1('M');
     claim.setCurrLoc2("2");
     claim.setLastUpdated(clock.instant());
-    PreAdjFissProcCode code = new PreAdjFissProcCode();
+    RdaFissProcCode code = new RdaFissProcCode();
     code.setDcn("dcn");
     code.setPriority((short) 0);
     code.setProcCode("code-1");
     code.setProcFlag("fl-1");
     code.setLastUpdated(claim.getLastUpdated());
     claim.getProcCodes().add(code);
-    code = new PreAdjFissProcCode();
+    code = new RdaFissProcCode();
     code.setDcn("dcn");
     code.setPriority((short) 1);
     code.setProcCode("code-2");
@@ -214,9 +231,9 @@ public class FissClaimTransformerTest {
         .setSeq(MIN_SEQUENCE_NUM)
         .setChangeType(ChangeType.CHANGE_TYPE_INSERT)
         .setClaim(claimBuilder.build());
-    PreAdjFissClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
+    RdaFissClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
     TransformerTestUtils.assertListContentsHaveSamePropertyValues(
-        claim.getProcCodes(), transformed.getProcCodes(), PreAdjFissProcCode::getPriority);
+        claim.getProcCodes(), transformed.getProcCodes(), RdaFissProcCode::getPriority);
   }
 
   /**
@@ -253,7 +270,7 @@ public class FissClaimTransformerTest {
     claim.setCurrLoc1('M');
     claim.setCurrLoc2("9997");
     claim.setLastUpdated(clock.instant());
-    PreAdjFissDiagnosisCode code = new PreAdjFissDiagnosisCode();
+    RdaFissDiagnosisCode code = new RdaFissDiagnosisCode();
     code.setDcn("dcn");
     code.setPriority((short) 0);
     code.setDiagCd2("code-1");
@@ -261,7 +278,7 @@ public class FissClaimTransformerTest {
     code.setBitFlags("1234");
     code.setLastUpdated(claim.getLastUpdated());
     claim.getDiagCodes().add(code);
-    code = new PreAdjFissDiagnosisCode();
+    code = new RdaFissDiagnosisCode();
     code.setDcn("dcn");
     code.setPriority((short) 1);
     code.setDiagCd2("code-2");
@@ -273,10 +290,10 @@ public class FissClaimTransformerTest {
         .setSeq(MIN_SEQUENCE_NUM)
         .setChangeType(ChangeType.CHANGE_TYPE_UPDATE)
         .setClaim(claimBuilder.build());
-    PreAdjFissClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
+    RdaFissClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
     assertThat(transformed, samePropertyValuesAs(claim));
     TransformerTestUtils.assertListContentsHaveSamePropertyValues(
-        claim.getDiagCodes(), transformed.getDiagCodes(), PreAdjFissDiagnosisCode::getPriority);
+        claim.getDiagCodes(), transformed.getDiagCodes(), RdaFissDiagnosisCode::getPriority);
   }
 
   /**
@@ -326,10 +343,10 @@ public class FissClaimTransformerTest {
     claim.setCurrLoc1('M');
     claim.setCurrLoc2("9997");
     claim.setLastUpdated(clock.instant());
-    PreAdjFissPayer payer = new PreAdjFissPayer();
+    RdaFissPayer payer = new RdaFissPayer();
     payer.setDcn("dcn");
     payer.setPriority((short) 0);
-    payer.setPayerType(PreAdjFissPayer.PayerType.Insured);
+    payer.setPayerType(RdaFissPayer.PayerType.Insured);
     payer.setPayersId("H");
     payer.setPayersName("payers-name");
     payer.setRelInd("N");
@@ -354,10 +371,10 @@ public class FissClaimTransformerTest {
         .setSeq(MIN_SEQUENCE_NUM)
         .setChangeType(ChangeType.CHANGE_TYPE_UPDATE)
         .setClaim(claimBuilder.build());
-    PreAdjFissClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
+    RdaFissClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
     assertThat(transformed, samePropertyValuesAs(claim));
     TransformerTestUtils.assertListContentsHaveSamePropertyValues(
-        claim.getPayers(), transformed.getPayers(), PreAdjFissPayer::getPriority);
+        claim.getPayers(), transformed.getPayers(), RdaFissPayer::getPriority);
   }
 
   /**
@@ -408,10 +425,10 @@ public class FissClaimTransformerTest {
     claim.setCurrLoc1('M');
     claim.setCurrLoc2("9997");
     claim.setLastUpdated(clock.instant());
-    PreAdjFissPayer payer = new PreAdjFissPayer();
+    RdaFissPayer payer = new RdaFissPayer();
     payer.setDcn("dcn");
     payer.setPriority((short) 0);
-    payer.setPayerType(PreAdjFissPayer.PayerType.BeneZ);
+    payer.setPayerType(RdaFissPayer.PayerType.BeneZ);
     payer.setPayersId("H");
     payer.setPayersName("payers-name");
     payer.setRelInd("N");
@@ -437,10 +454,10 @@ public class FissClaimTransformerTest {
         .setSeq(MIN_SEQUENCE_NUM)
         .setChangeType(ChangeType.CHANGE_TYPE_UPDATE)
         .setClaim(claimBuilder.build());
-    PreAdjFissClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
+    RdaFissClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
     assertThat(transformed, samePropertyValuesAs(claim));
     TransformerTestUtils.assertListContentsHaveSamePropertyValues(
-        claim.getPayers(), transformed.getPayers(), PreAdjFissPayer::getPriority);
+        claim.getPayers(), transformed.getPayers(), RdaFissPayer::getPriority);
   }
 
   /**
@@ -469,7 +486,7 @@ public class FissClaimTransformerTest {
     claim.setCurrLoc1('M');
     claim.setCurrLoc2("9997");
     claim.setLastUpdated(clock.instant());
-    PreAdjFissAuditTrail auditTrail = new PreAdjFissAuditTrail();
+    RdaFissAuditTrail auditTrail = new RdaFissAuditTrail();
     auditTrail.setDcn("dcn");
     auditTrail.setPriority((short) 0);
     auditTrail.setBadtStatus("M");
@@ -483,30 +500,43 @@ public class FissClaimTransformerTest {
         .setSeq(MIN_SEQUENCE_NUM)
         .setChangeType(ChangeType.CHANGE_TYPE_UPDATE)
         .setClaim(claimBuilder.build());
-    PreAdjFissClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
+    RdaFissClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
     assertThat(transformed, samePropertyValuesAs(claim));
     TransformerTestUtils.assertListContentsHaveSamePropertyValues(
-        claim.getAuditTrail(), transformed.getAuditTrail(), PreAdjFissAuditTrail::getPriority);
+        claim.getAuditTrail(), transformed.getAuditTrail(), RdaFissAuditTrail::getPriority);
   }
 
   @Test
   public void testMissingRequiredFieldsGenerateErrors() {
+    final long SEQUENCE_NUM = 37;
+
     try {
       changeBuilder
-          .setSeq(MIN_SEQUENCE_NUM)
+          .setSeq(SEQUENCE_NUM)
           .setChangeType(ChangeType.CHANGE_TYPE_UPDATE)
           .setClaim(claimBuilder.build());
       transformer.transformClaim(changeBuilder.build());
       fail("should have thrown");
     } catch (DataTransformer.TransformationException ex) {
-      assertEquals(
-          Arrays.asList(
+      List<DataTransformer.ErrorMessage> expectedErrors =
+          List.of(
               new DataTransformer.ErrorMessage("dcn", "invalid length: expected=[1,23] actual=0"),
               new DataTransformer.ErrorMessage("hicNo", "invalid length: expected=[1,12] actual=0"),
               new DataTransformer.ErrorMessage("currStatus", "no value set"),
               new DataTransformer.ErrorMessage("currLoc1", "no value set"),
-              new DataTransformer.ErrorMessage("currLoc2", "no value set")),
-          ex.getErrors());
+              new DataTransformer.ErrorMessage("currLoc2", "no value set"));
+
+      String expectedMessage =
+          String.format(
+              "failed with %d errors: seq=%d dcn= errors=[%s]",
+              expectedErrors.size(),
+              SEQUENCE_NUM,
+              expectedErrors.stream()
+                  .map(DataTransformer.ErrorMessage::toString)
+                  .collect(Collectors.joining(", ")));
+
+      assertEquals(expectedMessage, ex.getMessage());
+      assertEquals(expectedErrors, ex.getErrors());
     }
   }
 
@@ -516,14 +546,14 @@ public class FissClaimTransformerTest {
   public void testClaimDcn() {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
-            FissClaim.Builder::setDcn, PreAdjFissClaim::getDcn, "dcn", 23);
+            FissClaim.Builder::setDcn, RdaFissClaim::getDcn, "dcn", 23);
   }
 
   @Test
   public void testClaimHicNo() {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
-            FissClaim.Builder::setHicNo, PreAdjFissClaim::getHicNo, "hicNo", 12);
+            FissClaim.Builder::setHicNo, RdaFissClaim::getHicNo, "hicNo", 12);
   }
 
   @Test
@@ -535,7 +565,7 @@ public class FissClaimTransformerTest {
             FissClaimStatus.CLAIM_STATUS_MOVE,
             "M")
         .verifyEnumFieldTransformationRejectsUnrecognizedValue(
-            FissClaim.Builder::setCurrStatusUnrecognized, PreAdjFissClaim.Fields.currStatus, "ZZZ");
+            FissClaim.Builder::setCurrStatusUnrecognized, RdaFissClaim.Fields.currStatus, "ZZZ");
   }
 
   @Test
@@ -549,7 +579,7 @@ public class FissClaimTransformerTest {
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setCurrLoc1Unrecognized,
             claim -> String.valueOf(claim.getCurrLoc1()),
-            PreAdjFissClaim.Fields.currLoc1,
+            RdaFissClaim.Fields.currLoc1,
             1);
   }
 
@@ -558,14 +588,54 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setCurrLoc2Enum,
-            PreAdjFissClaim::getCurrLoc2,
+            RdaFissClaim::getCurrLoc2,
             FissCurrentLocation2.CURRENT_LOCATION_2_CABLE,
             "9000")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setCurrLoc2Unrecognized,
-            PreAdjFissClaim::getCurrLoc2,
-            PreAdjFissClaim.Fields.currLoc2,
+            RdaFissClaim::getCurrLoc2,
+            RdaFissClaim.Fields.currLoc2,
             5);
+  }
+
+  @Test
+  public void testClaimProvStateCd() {
+    new ClaimFieldTester()
+        .verifyStringFieldCopiedCorrectly(
+            FissClaim.Builder::setProvStateCd,
+            RdaFissClaim::getProvStateCd,
+            RdaFissClaim.Fields.provStateCd,
+            2);
+  }
+
+  @Test
+  public void testClaimProvTypFacilCd() {
+    new ClaimFieldTester()
+        .verifyStringFieldCopiedCorrectly(
+            FissClaim.Builder::setProvTypFacilCd,
+            RdaFissClaim::getProvTypFacilCd,
+            RdaFissClaim.Fields.provTypFacilCd,
+            1);
+  }
+
+  @Test
+  public void testClaimProvEmerInd() {
+    new ClaimFieldTester()
+        .verifyStringFieldCopiedCorrectly(
+            FissClaim.Builder::setProvEmerInd,
+            RdaFissClaim::getProvEmerInd,
+            RdaFissClaim.Fields.provEmerInd,
+            1);
+  }
+
+  @Test
+  public void testClaimProvDeptId() {
+    new ClaimFieldTester()
+        .verifyStringFieldCopiedCorrectly(
+            FissClaim.Builder::setProvDeptId,
+            RdaFissClaim::getProvDeptId,
+            RdaFissClaim.Fields.provDeptId,
+            3);
   }
 
   @Test
@@ -573,8 +643,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setMedaProvId,
-            PreAdjFissClaim::getMedaProvId,
-            PreAdjFissClaim.Fields.medaProvId,
+            RdaFissClaim::getMedaProvId,
+            RdaFissClaim.Fields.medaProvId,
             13);
   }
 
@@ -583,8 +653,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setMedaProv6,
-            PreAdjFissClaim::getMedaProv_6,
-            PreAdjFissClaim.Fields.medaProv_6,
+            RdaFissClaim::getMedaProv_6,
+            RdaFissClaim.Fields.medaProv_6,
             6);
   }
 
@@ -593,8 +663,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyAmountStringFieldTransformedCorrectly(
             FissClaim.Builder::setTotalChargeAmount,
-            PreAdjFissClaim::getTotalChargeAmount,
-            PreAdjFissClaim.Fields.totalChargeAmount);
+            RdaFissClaim::getTotalChargeAmount,
+            RdaFissClaim.Fields.totalChargeAmount);
   }
 
   @Test
@@ -602,8 +672,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             FissClaim.Builder::setRecdDtCymd,
-            PreAdjFissClaim::getReceivedDate,
-            PreAdjFissClaim.Fields.receivedDate);
+            RdaFissClaim::getReceivedDate,
+            RdaFissClaim.Fields.receivedDate);
   }
 
   @Test
@@ -611,8 +681,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             FissClaim.Builder::setCurrTranDtCymd,
-            PreAdjFissClaim::getCurrTranDate,
-            PreAdjFissClaim.Fields.currTranDate);
+            RdaFissClaim::getCurrTranDate,
+            RdaFissClaim.Fields.currTranDate);
   }
 
   @Test
@@ -620,8 +690,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setAdmDiagCode,
-            PreAdjFissClaim::getAdmitDiagCode,
-            PreAdjFissClaim.Fields.admitDiagCode,
+            RdaFissClaim::getAdmitDiagCode,
+            RdaFissClaim.Fields.admitDiagCode,
             7);
   }
 
@@ -630,8 +700,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setPrincipleDiag,
-            PreAdjFissClaim::getPrincipleDiag,
-            PreAdjFissClaim.Fields.principleDiag,
+            RdaFissClaim::getPrincipleDiag,
+            RdaFissClaim.Fields.principleDiag,
             7);
   }
 
@@ -640,8 +710,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setNpiNumber,
-            PreAdjFissClaim::getNpiNumber,
-            PreAdjFissClaim.Fields.npiNumber,
+            RdaFissClaim::getNpiNumber,
+            RdaFissClaim.Fields.npiNumber,
             10);
   }
 
@@ -649,9 +719,9 @@ public class FissClaimTransformerTest {
   public void testClaimMbi() {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
-            FissClaim.Builder::setMbi, PreAdjFissClaim::getMbi, PreAdjFissClaim.Fields.mbi, 11)
+            FissClaim.Builder::setMbi, RdaFissClaim::getMbi, RdaFissClaim.Fields.mbi, 11)
         .verifyIdHashFieldPopulatedCorrectly(
-            FissClaim.Builder::setMbi, PreAdjFissClaim::getMbiHash, 11, idHasher);
+            FissClaim.Builder::setMbi, RdaFissClaim::getMbiHash, 11, idHasher);
   }
 
   @Test
@@ -659,8 +729,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setFedTaxNb,
-            PreAdjFissClaim::getFedTaxNumber,
-            PreAdjFissClaim.Fields.fedTaxNumber,
+            RdaFissClaim::getFedTaxNumber,
+            RdaFissClaim.Fields.fedTaxNumber,
             10);
   }
 
@@ -669,8 +739,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setPracLocAddr1,
-            PreAdjFissClaim::getPracLocAddr1,
-            PreAdjFissClaim.Fields.pracLocAddr1,
+            RdaFissClaim::getPracLocAddr1,
+            RdaFissClaim.Fields.pracLocAddr1,
             2147483647);
   }
 
@@ -679,8 +749,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setPracLocAddr2,
-            PreAdjFissClaim::getPracLocAddr2,
-            PreAdjFissClaim.Fields.pracLocAddr2,
+            RdaFissClaim::getPracLocAddr2,
+            RdaFissClaim.Fields.pracLocAddr2,
             2147483647);
   }
 
@@ -689,8 +759,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setPracLocCity,
-            PreAdjFissClaim::getPracLocCity,
-            PreAdjFissClaim.Fields.pracLocCity,
+            RdaFissClaim::getPracLocCity,
+            RdaFissClaim.Fields.pracLocCity,
             2147483647);
   }
 
@@ -699,8 +769,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setPracLocState,
-            PreAdjFissClaim::getPracLocState,
-            PreAdjFissClaim.Fields.pracLocState,
+            RdaFissClaim::getPracLocState,
+            RdaFissClaim.Fields.pracLocState,
             2);
   }
 
@@ -709,8 +779,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setPracLocZip,
-            PreAdjFissClaim::getPracLocZip,
-            PreAdjFissClaim.Fields.pracLocZip,
+            RdaFissClaim::getPracLocZip,
+            RdaFissClaim.Fields.pracLocZip,
             15);
   }
 
@@ -719,8 +789,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             FissClaim.Builder::setStmtCovFromCymd,
-            PreAdjFissClaim::getStmtCovFromDate,
-            PreAdjFissClaim.Fields.stmtCovFromDate);
+            RdaFissClaim::getStmtCovFromDate,
+            RdaFissClaim.Fields.stmtCovFromDate);
   }
 
   @Test
@@ -728,8 +798,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             FissClaim.Builder::setStmtCovToCymd,
-            PreAdjFissClaim::getStmtCovToDate,
-            PreAdjFissClaim.Fields.stmtCovToDate);
+            RdaFissClaim::getStmtCovToDate,
+            RdaFissClaim.Fields.stmtCovToDate);
   }
 
   @Test
@@ -743,7 +813,7 @@ public class FissClaimTransformerTest {
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setLobCdUnrecognized,
             claim -> String.valueOf(claim.getLobCd()),
-            PreAdjFissClaim.Fields.lobCd,
+            RdaFissClaim.Fields.lobCd,
             1);
   }
 
@@ -758,7 +828,7 @@ public class FissClaimTransformerTest {
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setServTypCdUnrecognized,
             claim -> String.valueOf(claim.getServTypeCd()),
-            PreAdjFissClaim.Fields.servTypeCd,
+            RdaFissClaim.Fields.servTypeCd,
             1);
   }
 
@@ -767,13 +837,13 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setFreqCdEnum,
-            PreAdjFissClaim::getFreqCd,
+            RdaFissClaim::getFreqCd,
             FissBillFrequency.BILL_FREQUENCY_ADJUSTMENT_CLAIM_F,
             "F")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setFreqCdUnrecognized,
-            PreAdjFissClaim::getFreqCd,
-            PreAdjFissClaim.Fields.freqCd,
+            RdaFissClaim::getFreqCd,
+            RdaFissClaim.Fields.freqCd,
             1);
   }
 
@@ -782,8 +852,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setBillTypCd,
-            PreAdjFissClaim::getBillTypCd,
-            PreAdjFissClaim.Fields.billTypCd,
+            RdaFissClaim::getBillTypCd,
+            RdaFissClaim.Fields.billTypCd,
             3);
   }
 
@@ -792,8 +862,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setRejectCd,
-            PreAdjFissClaim::getRejectCd,
-            PreAdjFissClaim.Fields.rejectCd,
+            RdaFissClaim::getRejectCd,
+            RdaFissClaim.Fields.rejectCd,
             5);
   }
 
@@ -802,8 +872,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setFullPartDenInd,
-            PreAdjFissClaim::getFullPartDenInd,
-            PreAdjFissClaim.Fields.fullPartDenInd,
+            RdaFissClaim::getFullPartDenInd,
+            RdaFissClaim.Fields.fullPartDenInd,
             1);
   }
 
@@ -812,8 +882,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setNonPayInd,
-            PreAdjFissClaim::getNonPayInd,
-            PreAdjFissClaim.Fields.nonPayInd,
+            RdaFissClaim::getNonPayInd,
+            RdaFissClaim.Fields.nonPayInd,
             2);
   }
 
@@ -822,8 +892,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setXrefDcnNbr,
-            PreAdjFissClaim::getXrefDcnNbr,
-            PreAdjFissClaim.Fields.xrefDcnNbr,
+            RdaFissClaim::getXrefDcnNbr,
+            RdaFissClaim.Fields.xrefDcnNbr,
             23);
   }
 
@@ -832,13 +902,13 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setAdjReqCdEnum,
-            PreAdjFissClaim::getAdjReqCd,
+            RdaFissClaim::getAdjReqCd,
             FissAdjustmentRequestorCode.ADJUSTMENT_REQUESTOR_CODE_FISCAL_INTERMEDIARY,
             "F")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setAdjReqCdUnrecognized,
-            PreAdjFissClaim::getAdjReqCd,
-            PreAdjFissClaim.Fields.adjReqCd,
+            RdaFissClaim::getAdjReqCd,
+            RdaFissClaim.Fields.adjReqCd,
             1);
   }
 
@@ -847,8 +917,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setAdjReasCd,
-            PreAdjFissClaim::getAdjReasCd,
-            PreAdjFissClaim.Fields.adjReasCd,
+            RdaFissClaim::getAdjReasCd,
+            RdaFissClaim.Fields.adjReasCd,
             2);
   }
 
@@ -857,8 +927,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setCancelXrefDcn,
-            PreAdjFissClaim::getCancelXrefDcn,
-            PreAdjFissClaim.Fields.cancelXrefDcn,
+            RdaFissClaim::getCancelXrefDcn,
+            RdaFissClaim.Fields.cancelXrefDcn,
             23);
   }
 
@@ -867,8 +937,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             FissClaim.Builder::setCancelDateCymd,
-            PreAdjFissClaim::getCancelDate,
-            PreAdjFissClaim.Fields.cancelDate);
+            RdaFissClaim::getCancelDate,
+            RdaFissClaim.Fields.cancelDate);
   }
 
   @Test
@@ -876,13 +946,13 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setCancAdjCdEnum,
-            PreAdjFissClaim::getCancAdjCd,
+            RdaFissClaim::getCancAdjCd,
             FissCancelAdjustmentCode.CANCEL_ADJUSTMENT_CODE_COVERAGE,
             "C")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setCancAdjCdUnrecognized,
-            PreAdjFissClaim::getCancAdjCd,
-            PreAdjFissClaim.Fields.cancAdjCd,
+            RdaFissClaim::getCancAdjCd,
+            RdaFissClaim.Fields.cancAdjCd,
             1);
   }
 
@@ -891,8 +961,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setOriginalXrefDcn,
-            PreAdjFissClaim::getOriginalXrefDcn,
-            PreAdjFissClaim.Fields.originalXrefDcn,
+            RdaFissClaim::getOriginalXrefDcn,
+            RdaFissClaim.Fields.originalXrefDcn,
             23);
   }
 
@@ -900,9 +970,7 @@ public class FissClaimTransformerTest {
   public void testClaimPaidDt() {
     new ClaimFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
-            FissClaim.Builder::setPaidDtCymd,
-            PreAdjFissClaim::getPaidDt,
-            PreAdjFissClaim.Fields.paidDt);
+            FissClaim.Builder::setPaidDtCymd, RdaFissClaim::getPaidDt, RdaFissClaim.Fields.paidDt);
   }
 
   @Test
@@ -910,8 +978,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             FissClaim.Builder::setAdmDateCymd,
-            PreAdjFissClaim::getAdmDate,
-            PreAdjFissClaim.Fields.admDate);
+            RdaFissClaim::getAdmDate,
+            RdaFissClaim.Fields.admDate);
   }
 
   @Test
@@ -919,13 +987,13 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setAdmSourceEnum,
-            PreAdjFissClaim::getAdmSource,
+            RdaFissClaim::getAdmSource,
             FissSourceOfAdmission.SOURCE_OF_ADMISSION_CLINIC_REFERRAL,
             "2")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setAdmSourceUnrecognized,
-            PreAdjFissClaim::getAdmSource,
-            PreAdjFissClaim.Fields.admSource,
+            RdaFissClaim::getAdmSource,
+            RdaFissClaim.Fields.admSource,
             1);
   }
 
@@ -934,13 +1002,13 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setPrimaryPayerCodeEnum,
-            PreAdjFissClaim::getPrimaryPayerCode,
+            RdaFissClaim::getPrimaryPayerCode,
             FissPayersCode.PAYERS_CODE_AUTO_NO_FAULT,
             "D")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setPrimaryPayerCodeUnrecognized,
-            PreAdjFissClaim::getPrimaryPayerCode,
-            PreAdjFissClaim.Fields.primaryPayerCode,
+            RdaFissClaim::getPrimaryPayerCode,
+            RdaFissClaim.Fields.primaryPayerCode,
             1);
   }
 
@@ -949,8 +1017,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setAttendPhysId,
-            PreAdjFissClaim::getAttendPhysId,
-            PreAdjFissClaim.Fields.attendPhysId,
+            RdaFissClaim::getAttendPhysId,
+            RdaFissClaim.Fields.attendPhysId,
             16);
   }
 
@@ -959,8 +1027,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setAttendPhysLname,
-            PreAdjFissClaim::getAttendPhysLname,
-            PreAdjFissClaim.Fields.attendPhysLname,
+            RdaFissClaim::getAttendPhysLname,
+            RdaFissClaim.Fields.attendPhysLname,
             17);
   }
 
@@ -969,8 +1037,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setAttendPhysFname,
-            PreAdjFissClaim::getAttendPhysFname,
-            PreAdjFissClaim.Fields.attendPhysFname,
+            RdaFissClaim::getAttendPhysFname,
+            RdaFissClaim.Fields.attendPhysFname,
             18);
   }
 
@@ -979,8 +1047,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setAttendPhysMint,
-            PreAdjFissClaim::getAttendPhysMint,
-            PreAdjFissClaim.Fields.attendPhysMint,
+            RdaFissClaim::getAttendPhysMint,
+            RdaFissClaim.Fields.attendPhysMint,
             1);
   }
 
@@ -989,13 +1057,13 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setAttendPhysFlagEnum,
-            PreAdjFissClaim::getAttendPhysFlag,
+            RdaFissClaim::getAttendPhysFlag,
             FissPhysicianFlag.PHYSICIAN_FLAG_NO,
             "N")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setAttendPhysFlagUnrecognized,
-            PreAdjFissClaim::getAttendPhysFlag,
-            PreAdjFissClaim.Fields.attendPhysFlag,
+            RdaFissClaim::getAttendPhysFlag,
+            RdaFissClaim.Fields.attendPhysFlag,
             1);
   }
 
@@ -1004,8 +1072,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setOperatingPhysId,
-            PreAdjFissClaim::getOperatingPhysId,
-            PreAdjFissClaim.Fields.operatingPhysId,
+            RdaFissClaim::getOperatingPhysId,
+            RdaFissClaim.Fields.operatingPhysId,
             16);
   }
 
@@ -1014,8 +1082,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setOperPhysLname,
-            PreAdjFissClaim::getOperPhysLname,
-            PreAdjFissClaim.Fields.operPhysLname,
+            RdaFissClaim::getOperPhysLname,
+            RdaFissClaim.Fields.operPhysLname,
             17);
   }
 
@@ -1024,8 +1092,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setOperPhysFname,
-            PreAdjFissClaim::getOperPhysFname,
-            PreAdjFissClaim.Fields.operPhysFname,
+            RdaFissClaim::getOperPhysFname,
+            RdaFissClaim.Fields.operPhysFname,
             18);
   }
 
@@ -1034,8 +1102,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setOperPhysMint,
-            PreAdjFissClaim::getOperPhysMint,
-            PreAdjFissClaim.Fields.operPhysMint,
+            RdaFissClaim::getOperPhysMint,
+            RdaFissClaim.Fields.operPhysMint,
             1);
   }
 
@@ -1044,13 +1112,13 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setOperPhysFlagEnum,
-            PreAdjFissClaim::getOperPhysFlag,
+            RdaFissClaim::getOperPhysFlag,
             FissPhysicianFlag.PHYSICIAN_FLAG_NO,
             "N")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setOperPhysFlagUnrecognized,
-            PreAdjFissClaim::getOperPhysFlag,
-            PreAdjFissClaim.Fields.operPhysFlag,
+            RdaFissClaim::getOperPhysFlag,
+            RdaFissClaim.Fields.operPhysFlag,
             1);
   }
 
@@ -1059,8 +1127,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setOthPhysId,
-            PreAdjFissClaim::getOthPhysId,
-            PreAdjFissClaim.Fields.othPhysId,
+            RdaFissClaim::getOthPhysId,
+            RdaFissClaim.Fields.othPhysId,
             16);
   }
 
@@ -1069,8 +1137,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setOthPhysLname,
-            PreAdjFissClaim::getOthPhysLname,
-            PreAdjFissClaim.Fields.othPhysLname,
+            RdaFissClaim::getOthPhysLname,
+            RdaFissClaim.Fields.othPhysLname,
             17);
   }
 
@@ -1079,8 +1147,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setOthPhysFname,
-            PreAdjFissClaim::getOthPhysFname,
-            PreAdjFissClaim.Fields.othPhysFname,
+            RdaFissClaim::getOthPhysFname,
+            RdaFissClaim.Fields.othPhysFname,
             18);
   }
 
@@ -1089,8 +1157,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setOthPhysMint,
-            PreAdjFissClaim::getOthPhysMint,
-            PreAdjFissClaim.Fields.othPhysMint,
+            RdaFissClaim::getOthPhysMint,
+            RdaFissClaim.Fields.othPhysMint,
             1);
   }
 
@@ -1099,13 +1167,13 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setOthPhysFlagEnum,
-            PreAdjFissClaim::getOthPhysFlag,
+            RdaFissClaim::getOthPhysFlag,
             FissPhysicianFlag.PHYSICIAN_FLAG_NO,
             "N")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setOthPhysFlagUnrecognized,
-            PreAdjFissClaim::getOthPhysFlag,
-            PreAdjFissClaim.Fields.othPhysFlag,
+            RdaFissClaim::getOthPhysFlag,
+            RdaFissClaim.Fields.othPhysFlag,
             1);
   }
 
@@ -1114,8 +1182,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setXrefHicNbr,
-            PreAdjFissClaim::getXrefHicNbr,
-            PreAdjFissClaim.Fields.xrefHicNbr,
+            RdaFissClaim::getXrefHicNbr,
+            RdaFissClaim.Fields.xrefHicNbr,
             12);
   }
 
@@ -1124,13 +1192,13 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setProcNewHicIndEnum,
-            PreAdjFissClaim::getProcNewHicInd,
+            RdaFissClaim::getProcNewHicInd,
             FissProcessNewHealthInsuranceClaimNumberIndicator.PROCESS_NEW_HIC_INDICATOR_Y,
             "Y")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setProcNewHicIndUnrecognized,
-            PreAdjFissClaim::getProcNewHicInd,
-            PreAdjFissClaim.Fields.procNewHicInd,
+            RdaFissClaim::getProcNewHicInd,
+            RdaFissClaim.Fields.procNewHicInd,
             1);
   }
 
@@ -1138,10 +1206,7 @@ public class FissClaimTransformerTest {
   public void testClaimNewHic() {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
-            FissClaim.Builder::setNewHic,
-            PreAdjFissClaim::getNewHic,
-            PreAdjFissClaim.Fields.newHic,
-            12);
+            FissClaim.Builder::setNewHic, RdaFissClaim::getNewHic, RdaFissClaim.Fields.newHic, 12);
   }
 
   @Test
@@ -1149,13 +1214,13 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setReposIndEnum,
-            PreAdjFissClaim::getReposInd,
+            RdaFissClaim::getReposInd,
             FissRepositoryIndicator.REPOSITORY_INDICATOR_HIC_HAS_BEEN_MOVED,
             "Y")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setReposIndUnrecognized,
-            PreAdjFissClaim::getReposInd,
-            PreAdjFissClaim.Fields.reposInd,
+            RdaFissClaim::getReposInd,
+            RdaFissClaim.Fields.reposInd,
             1);
   }
 
@@ -1164,8 +1229,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setReposHic,
-            PreAdjFissClaim::getReposHic,
-            PreAdjFissClaim.Fields.reposHic,
+            RdaFissClaim::getReposHic,
+            RdaFissClaim.Fields.reposHic,
             12);
   }
 
@@ -1174,13 +1239,13 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setMbiSubmBeneIndEnum,
-            PreAdjFissClaim::getMbiSubmBeneInd,
+            RdaFissClaim::getMbiSubmBeneInd,
             FissHealthInsuranceClaimNumberOrMedicareBeneficiaryIdentifier.FISS_HIC_OR_MBI_IS_HIC,
             "H")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setMbiSubmBeneIndUnrecognized,
-            PreAdjFissClaim::getMbiSubmBeneInd,
-            PreAdjFissClaim.Fields.mbiSubmBeneInd,
+            RdaFissClaim::getMbiSubmBeneInd,
+            RdaFissClaim.Fields.mbiSubmBeneInd,
             1);
   }
 
@@ -1189,14 +1254,14 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissClaim.Builder::setAdjMbiIndEnum,
-            PreAdjFissClaim::getAdjMbiInd,
+            RdaFissClaim::getAdjMbiInd,
             FissAdjustmentMedicareBeneficiaryIdentifierIndicator
                 .ADJUSTMENT_MBI_INDICATOR_HIC_SUBMITTED_ON_ADJUSTMENT_OR_CANCEL_CLAIM,
             "H")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissClaim.Builder::setAdjMbiIndUnrecognized,
-            PreAdjFissClaim::getAdjMbiInd,
-            PreAdjFissClaim.Fields.adjMbiInd,
+            RdaFissClaim::getAdjMbiInd,
+            RdaFissClaim.Fields.adjMbiInd,
             1);
   }
 
@@ -1204,10 +1269,7 @@ public class FissClaimTransformerTest {
   public void testClaimAdjMbi() {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
-            FissClaim.Builder::setAdjMbi,
-            PreAdjFissClaim::getAdjMbi,
-            PreAdjFissClaim.Fields.adjMbi,
-            11);
+            FissClaim.Builder::setAdjMbi, RdaFissClaim::getAdjMbi, RdaFissClaim.Fields.adjMbi, 11);
   }
 
   @Test
@@ -1215,8 +1277,8 @@ public class FissClaimTransformerTest {
     new ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissClaim.Builder::setMedicalRecordNo,
-            PreAdjFissClaim::getMedicalRecordNo,
-            PreAdjFissClaim.Fields.medicalRecordNo,
+            RdaFissClaim::getMedicalRecordNo,
+            RdaFissClaim.Fields.medicalRecordNo,
             17);
   }
 
@@ -1228,8 +1290,8 @@ public class FissClaimTransformerTest {
     new ProcCodeFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissProcedureCode.Builder::setProcCd,
-            PreAdjFissProcCode::getProcCode,
-            PreAdjFissProcCode.Fields.procCode,
+            RdaFissProcCode::getProcCode,
+            RdaFissProcCode.Fields.procCode,
             10);
   }
 
@@ -1238,8 +1300,8 @@ public class FissClaimTransformerTest {
     new ProcCodeFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissProcedureCode.Builder::setProcFlag,
-            PreAdjFissProcCode::getProcFlag,
-            PreAdjFissProcCode.Fields.procFlag,
+            RdaFissProcCode::getProcFlag,
+            RdaFissProcCode.Fields.procFlag,
             4);
   }
 
@@ -1248,8 +1310,8 @@ public class FissClaimTransformerTest {
     new ProcCodeFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             FissProcedureCode.Builder::setProcDt,
-            PreAdjFissProcCode::getProcDate,
-            PreAdjFissProcCode.Fields.procDate);
+            RdaFissProcCode::getProcDate,
+            RdaFissProcCode.Fields.procDate);
   }
 
   // endregion ProcCode tests
@@ -1260,13 +1322,13 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissBeneZPayer.Builder::setPayersIdEnum,
-            PreAdjFissPayer::getPayersId,
+            RdaFissPayer::getPayersId,
             FissPayersCode.PAYERS_CODE_AUTO_NO_FAULT,
             "D")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissBeneZPayer.Builder::setPayersIdUnrecognized,
-            PreAdjFissPayer::getPayersId,
-            PreAdjFissPayer.Fields.payersId,
+            RdaFissPayer::getPayersId,
+            RdaFissPayer.Fields.payersId,
             1);
   }
 
@@ -1275,8 +1337,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissBeneZPayer.Builder::setPayersName,
-            PreAdjFissPayer::getPayersName,
-            PreAdjFissPayer.Fields.payersName,
+            RdaFissPayer::getPayersName,
+            RdaFissPayer.Fields.payersName,
             32);
   }
 
@@ -1285,13 +1347,13 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissBeneZPayer.Builder::setRelIndEnum,
-            PreAdjFissPayer::getRelInd,
+            RdaFissPayer::getRelInd,
             FissReleaseOfInformation.RELEASE_OF_INFORMATION_NO_RELEASE_ON_FILE,
             "N")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissBeneZPayer.Builder::setRelIndUnrecognized,
-            PreAdjFissPayer::getRelInd,
-            PreAdjFissPayer.Fields.relInd,
+            RdaFissPayer::getRelInd,
+            RdaFissPayer.Fields.relInd,
             1);
   }
 
@@ -1300,13 +1362,13 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissBeneZPayer.Builder::setAssignIndEnum,
-            PreAdjFissPayer::getAssignInd,
+            RdaFissPayer::getAssignInd,
             FissAssignmentOfBenefitsIndicator.ASSIGNMENT_OF_BENEFITS_INDICATOR_BENEFITS_ASSIGNED,
             "Y")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissBeneZPayer.Builder::setAssignIndUnrecognized,
-            PreAdjFissPayer::getAssignInd,
-            PreAdjFissPayer.Fields.assignInd,
+            RdaFissPayer::getAssignInd,
+            RdaFissPayer.Fields.assignInd,
             1);
   }
 
@@ -1315,8 +1377,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissBeneZPayer.Builder::setProviderNumber,
-            PreAdjFissPayer::getProviderNumber,
-            PreAdjFissPayer.Fields.providerNumber,
+            RdaFissPayer::getProviderNumber,
+            RdaFissPayer.Fields.providerNumber,
             13);
   }
 
@@ -1325,8 +1387,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissBeneZPayer.Builder::setAdjDcnIcn,
-            PreAdjFissPayer::getAdjDcnIcn,
-            PreAdjFissPayer.Fields.adjDcnIcn,
+            RdaFissPayer::getAdjDcnIcn,
+            RdaFissPayer.Fields.adjDcnIcn,
             23);
   }
 
@@ -1335,8 +1397,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyAmountStringFieldTransformedCorrectly(
             FissBeneZPayer.Builder::setPriorPmt,
-            PreAdjFissPayer::getPriorPmt,
-            PreAdjFissPayer.Fields.priorPmt);
+            RdaFissPayer::getPriorPmt,
+            RdaFissPayer.Fields.priorPmt);
   }
 
   @Test
@@ -1344,8 +1406,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyAmountStringFieldTransformedCorrectly(
             FissBeneZPayer.Builder::setEstAmtDue,
-            PreAdjFissPayer::getEstAmtDue,
-            PreAdjFissPayer.Fields.estAmtDue);
+            RdaFissPayer::getEstAmtDue,
+            RdaFissPayer.Fields.estAmtDue);
   }
 
   @Test
@@ -1353,13 +1415,13 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissBeneZPayer.Builder::setBeneRelEnum,
-            PreAdjFissPayer::getBeneRel,
+            RdaFissPayer::getBeneRel,
             FissPatientRelationshipCode.PATIENT_RELATIONSHIP_CODE_DEFAULT,
             "00")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissBeneZPayer.Builder::setBeneRelUnrecognized,
-            PreAdjFissPayer::getBeneRel,
-            PreAdjFissPayer.Fields.beneRel,
+            RdaFissPayer::getBeneRel,
+            RdaFissPayer.Fields.beneRel,
             2);
   }
 
@@ -1368,8 +1430,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissBeneZPayer.Builder::setBeneLastName,
-            PreAdjFissPayer::getBeneLastName,
-            PreAdjFissPayer.Fields.beneLastName,
+            RdaFissPayer::getBeneLastName,
+            RdaFissPayer.Fields.beneLastName,
             15);
   }
 
@@ -1378,8 +1440,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissBeneZPayer.Builder::setBeneFirstName,
-            PreAdjFissPayer::getBeneFirstName,
-            PreAdjFissPayer.Fields.beneFirstName,
+            RdaFissPayer::getBeneFirstName,
+            RdaFissPayer.Fields.beneFirstName,
             10);
   }
 
@@ -1388,8 +1450,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissBeneZPayer.Builder::setBeneMidInit,
-            PreAdjFissPayer::getBeneMidInit,
-            PreAdjFissPayer.Fields.beneMidInit,
+            RdaFissPayer::getBeneMidInit,
+            RdaFissPayer.Fields.beneMidInit,
             1);
   }
 
@@ -1398,8 +1460,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissBeneZPayer.Builder::setBeneSsnHic,
-            PreAdjFissPayer::getBeneSsnHic,
-            PreAdjFissPayer.Fields.beneSsnHic,
+            RdaFissPayer::getBeneSsnHic,
+            RdaFissPayer.Fields.beneSsnHic,
             19);
   }
 
@@ -1408,8 +1470,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissBeneZPayer.Builder::setInsuredGroupName,
-            PreAdjFissPayer::getInsuredGroupName,
-            PreAdjFissPayer.Fields.insuredGroupName,
+            RdaFissPayer::getInsuredGroupName,
+            RdaFissPayer.Fields.insuredGroupName,
             17);
   }
 
@@ -1418,8 +1480,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             FissBeneZPayer.Builder::setBeneDob,
-            PreAdjFissPayer::getBeneDob,
-            PreAdjFissPayer.Fields.beneDob);
+            RdaFissPayer::getBeneDob,
+            RdaFissPayer.Fields.beneDob);
   }
 
   @Test
@@ -1427,13 +1489,13 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissBeneZPayer.Builder::setBeneSexEnum,
-            PreAdjFissPayer::getBeneSex,
+            RdaFissPayer::getBeneSex,
             FissBeneficiarySex.BENEFICIARY_SEX_FEMALE,
             "F")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissBeneZPayer.Builder::setBeneSexUnrecognized,
-            PreAdjFissPayer::getBeneSex,
-            PreAdjFissPayer.Fields.beneSex,
+            RdaFissPayer::getBeneSex,
+            RdaFissPayer.Fields.beneSex,
             1);
   }
 
@@ -1442,8 +1504,8 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissBeneZPayer.Builder::setTreatAuthCd,
-            PreAdjFissPayer::getTreatAuthCd,
-            PreAdjFissPayer.Fields.treatAuthCd,
+            RdaFissPayer::getTreatAuthCd,
+            RdaFissPayer.Fields.treatAuthCd,
             18);
   }
 
@@ -1452,13 +1514,13 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissBeneZPayer.Builder::setInsuredSexEnum,
-            PreAdjFissPayer::getInsuredSex,
+            RdaFissPayer::getInsuredSex,
             FissBeneficiarySex.BENEFICIARY_SEX_FEMALE,
             "F")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissBeneZPayer.Builder::setInsuredSexUnrecognized,
-            PreAdjFissPayer::getInsuredSex,
-            PreAdjFissPayer.Fields.insuredSex,
+            RdaFissPayer::getInsuredSex,
+            RdaFissPayer.Fields.insuredSex,
             1);
   }
 
@@ -1467,13 +1529,13 @@ public class FissClaimTransformerTest {
     new BeneZPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissBeneZPayer.Builder::setInsuredRelX12Enum,
-            PreAdjFissPayer::getInsuredRelX12,
+            RdaFissPayer::getInsuredRelX12,
             FissPatientRelationshipCode.PATIENT_RELATIONSHIP_CODE_DEFAULT,
             "00")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissBeneZPayer.Builder::setInsuredRelX12Unrecognized,
-            PreAdjFissPayer::getInsuredRelX12,
-            PreAdjFissPayer.Fields.insuredRelX12,
+            RdaFissPayer::getInsuredRelX12,
+            RdaFissPayer.Fields.insuredRelX12,
             2);
   }
 
@@ -1485,13 +1547,13 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissInsuredPayer.Builder::setPayersIdEnum,
-            PreAdjFissPayer::getPayersId,
+            RdaFissPayer::getPayersId,
             FissPayersCode.PAYERS_CODE_AUTO_NO_FAULT,
             "D")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissInsuredPayer.Builder::setPayersIdUnrecognized,
-            PreAdjFissPayer::getPayersId,
-            PreAdjFissPayer.Fields.payersId,
+            RdaFissPayer::getPayersId,
+            RdaFissPayer.Fields.payersId,
             1);
   }
 
@@ -1500,8 +1562,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissInsuredPayer.Builder::setPayersName,
-            PreAdjFissPayer::getPayersName,
-            PreAdjFissPayer.Fields.payersName,
+            RdaFissPayer::getPayersName,
+            RdaFissPayer.Fields.payersName,
             32);
   }
 
@@ -1510,13 +1572,13 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissInsuredPayer.Builder::setRelIndEnum,
-            PreAdjFissPayer::getRelInd,
+            RdaFissPayer::getRelInd,
             FissReleaseOfInformation.RELEASE_OF_INFORMATION_NO_RELEASE_ON_FILE,
             "N")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissInsuredPayer.Builder::setRelIndUnrecognized,
-            PreAdjFissPayer::getRelInd,
-            PreAdjFissPayer.Fields.relInd,
+            RdaFissPayer::getRelInd,
+            RdaFissPayer.Fields.relInd,
             1);
   }
 
@@ -1525,13 +1587,13 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissInsuredPayer.Builder::setAssignIndEnum,
-            PreAdjFissPayer::getAssignInd,
+            RdaFissPayer::getAssignInd,
             FissAssignmentOfBenefitsIndicator.ASSIGNMENT_OF_BENEFITS_INDICATOR_BENEFITS_ASSIGNED,
             "Y")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissInsuredPayer.Builder::setAssignIndUnrecognized,
-            PreAdjFissPayer::getAssignInd,
-            PreAdjFissPayer.Fields.assignInd,
+            RdaFissPayer::getAssignInd,
+            RdaFissPayer.Fields.assignInd,
             1);
   }
 
@@ -1540,8 +1602,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissInsuredPayer.Builder::setProviderNumber,
-            PreAdjFissPayer::getProviderNumber,
-            PreAdjFissPayer.Fields.providerNumber,
+            RdaFissPayer::getProviderNumber,
+            RdaFissPayer.Fields.providerNumber,
             13);
   }
 
@@ -1550,8 +1612,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissInsuredPayer.Builder::setAdjDcnIcn,
-            PreAdjFissPayer::getAdjDcnIcn,
-            PreAdjFissPayer.Fields.adjDcnIcn,
+            RdaFissPayer::getAdjDcnIcn,
+            RdaFissPayer.Fields.adjDcnIcn,
             23);
   }
 
@@ -1560,8 +1622,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyAmountStringFieldTransformedCorrectly(
             FissInsuredPayer.Builder::setPriorPmt,
-            PreAdjFissPayer::getPriorPmt,
-            PreAdjFissPayer.Fields.priorPmt);
+            RdaFissPayer::getPriorPmt,
+            RdaFissPayer.Fields.priorPmt);
   }
 
   @Test
@@ -1569,8 +1631,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyAmountStringFieldTransformedCorrectly(
             FissInsuredPayer.Builder::setEstAmtDue,
-            PreAdjFissPayer::getEstAmtDue,
-            PreAdjFissPayer.Fields.estAmtDue);
+            RdaFissPayer::getEstAmtDue,
+            RdaFissPayer.Fields.estAmtDue);
   }
 
   @Test
@@ -1578,13 +1640,13 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissInsuredPayer.Builder::setInsuredRelEnum,
-            PreAdjFissPayer::getInsuredRel,
+            RdaFissPayer::getInsuredRel,
             FissPatientRelationshipCode.PATIENT_RELATIONSHIP_CODE_EMPLOYEE,
             "08")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissInsuredPayer.Builder::setInsuredRelUnrecognized,
-            PreAdjFissPayer::getInsuredRel,
-            PreAdjFissPayer.Fields.insuredRel,
+            RdaFissPayer::getInsuredRel,
+            RdaFissPayer.Fields.insuredRel,
             2);
   }
 
@@ -1593,8 +1655,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissInsuredPayer.Builder::setInsuredName,
-            PreAdjFissPayer::getInsuredName,
-            PreAdjFissPayer.Fields.insuredName,
+            RdaFissPayer::getInsuredName,
+            RdaFissPayer.Fields.insuredName,
             25);
   }
 
@@ -1603,8 +1665,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissInsuredPayer.Builder::setInsuredSsnHic,
-            PreAdjFissPayer::getInsuredSsnHic,
-            PreAdjFissPayer.Fields.insuredSsnHic,
+            RdaFissPayer::getInsuredSsnHic,
+            RdaFissPayer.Fields.insuredSsnHic,
             19);
   }
 
@@ -1613,8 +1675,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissInsuredPayer.Builder::setInsuredGroupName,
-            PreAdjFissPayer::getInsuredGroupName,
-            PreAdjFissPayer.Fields.insuredGroupName,
+            RdaFissPayer::getInsuredGroupName,
+            RdaFissPayer.Fields.insuredGroupName,
             17);
   }
 
@@ -1623,8 +1685,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissInsuredPayer.Builder::setInsuredGroupNbr,
-            PreAdjFissPayer::getInsuredGroupNbr,
-            PreAdjFissPayer.Fields.insuredGroupNbr,
+            RdaFissPayer::getInsuredGroupNbr,
+            RdaFissPayer.Fields.insuredGroupNbr,
             20);
   }
 
@@ -1633,8 +1695,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissInsuredPayer.Builder::setTreatAuthCd,
-            PreAdjFissPayer::getTreatAuthCd,
-            PreAdjFissPayer.Fields.treatAuthCd,
+            RdaFissPayer::getTreatAuthCd,
+            RdaFissPayer.Fields.treatAuthCd,
             18);
   }
 
@@ -1643,13 +1705,13 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissInsuredPayer.Builder::setInsuredSexEnum,
-            PreAdjFissPayer::getInsuredSex,
+            RdaFissPayer::getInsuredSex,
             FissBeneficiarySex.BENEFICIARY_SEX_UNKNOWN,
             "U")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissInsuredPayer.Builder::setInsuredSexUnrecognized,
-            PreAdjFissPayer::getInsuredSex,
-            PreAdjFissPayer.Fields.insuredSex,
+            RdaFissPayer::getInsuredSex,
+            RdaFissPayer.Fields.insuredSex,
             1);
   }
 
@@ -1658,13 +1720,13 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissInsuredPayer.Builder::setInsuredRelX12Enum,
-            PreAdjFissPayer::getInsuredRelX12,
+            RdaFissPayer::getInsuredRelX12,
             FissPatientRelationshipCode.PATIENT_RELATIONSHIP_CODE_DEFAULT,
             "00")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             FissInsuredPayer.Builder::setInsuredRelX12Unrecognized,
-            PreAdjFissPayer::getInsuredRelX12,
-            PreAdjFissPayer.Fields.insuredRelX12,
+            RdaFissPayer::getInsuredRelX12,
+            RdaFissPayer.Fields.insuredRelX12,
             2);
   }
 
@@ -1673,8 +1735,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             FissInsuredPayer.Builder::setInsuredDob,
-            PreAdjFissPayer::getInsuredDob,
-            PreAdjFissPayer.Fields.insuredDob);
+            RdaFissPayer::getInsuredDob,
+            RdaFissPayer.Fields.insuredDob);
   }
 
   @Test
@@ -1682,8 +1744,8 @@ public class FissClaimTransformerTest {
     new InsuredPayerFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissInsuredPayer.Builder::setInsuredDobText,
-            PreAdjFissPayer::getInsuredDobText,
-            PreAdjFissPayer.Fields.insuredDobText,
+            RdaFissPayer::getInsuredDobText,
+            RdaFissPayer.Fields.insuredDobText,
             9);
   }
 
@@ -1695,7 +1757,7 @@ public class FissClaimTransformerTest {
     new AuditTrailFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             FissAuditTrail.Builder::setBadtStatusEnum,
-            PreAdjFissAuditTrail::getBadtStatus,
+            RdaFissAuditTrail::getBadtStatus,
             FissClaimStatus.CLAIM_STATUS_BLANK,
             " ");
   }
@@ -1705,8 +1767,8 @@ public class FissClaimTransformerTest {
     new AuditTrailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissAuditTrail.Builder::setBadtLoc,
-            PreAdjFissAuditTrail::getBadtLoc,
-            PreAdjFissAuditTrail.Fields.badtLoc,
+            RdaFissAuditTrail::getBadtLoc,
+            RdaFissAuditTrail.Fields.badtLoc,
             5);
   }
 
@@ -1715,8 +1777,8 @@ public class FissClaimTransformerTest {
     new AuditTrailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissAuditTrail.Builder::setBadtOperId,
-            PreAdjFissAuditTrail::getBadtOperId,
-            PreAdjFissAuditTrail.Fields.badtOperId,
+            RdaFissAuditTrail::getBadtOperId,
+            RdaFissAuditTrail.Fields.badtOperId,
             9);
   }
 
@@ -1725,8 +1787,8 @@ public class FissClaimTransformerTest {
     new AuditTrailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             FissAuditTrail.Builder::setBadtReas,
-            PreAdjFissAuditTrail::getBadtReas,
-            PreAdjFissAuditTrail.Fields.badtReas,
+            RdaFissAuditTrail::getBadtReas,
+            RdaFissAuditTrail.Fields.badtReas,
             5);
   }
 
@@ -1735,8 +1797,8 @@ public class FissClaimTransformerTest {
     new AuditTrailFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             FissAuditTrail.Builder::setBadtCurrDateCymd,
-            PreAdjFissAuditTrail::getBadtCurrDate,
-            PreAdjFissAuditTrail.Fields.badtCurrDate);
+            RdaFissAuditTrail::getBadtCurrDate,
+            RdaFissAuditTrail.Fields.badtCurrDate);
   }
 
   // endregion AuditTrail tests
@@ -1770,14 +1832,14 @@ public class FissClaimTransformerTest {
     // servTypeCd specific tests begin here
 
     claim.setServTypeCd("2");
-    claim.setServTypeCdMapping(PreAdjFissClaim.ServTypeCdMapping.Normal);
+    claim.setServTypeCdMapping(RdaFissClaim.ServTypeCdMapping.Normal);
     claimBuilder.setServTypeCdEnum(
         FissBillClassification.BILL_CLASSIFICATION_HOSPITAL_BASED_OR_INPATIENT_PART_B);
     changeBuilder.setClaim(claimBuilder.build());
     assertChangeMatches(RdaChange.Type.INSERT);
 
     claim.setServTypeCd("6");
-    claim.setServTypeCdMapping(PreAdjFissClaim.ServTypeCdMapping.Clinic);
+    claim.setServTypeCdMapping(RdaFissClaim.ServTypeCdMapping.Clinic);
     claimBuilder.setServTypeCdForClinicsEnum(
         FissBillClassificationForClinics
             .BILL_CLASSIFICATION_FOR_CLINICS_COMMUNITY_MENTAL_HEALTH_CENTER);
@@ -1785,7 +1847,7 @@ public class FissClaimTransformerTest {
     assertChangeMatches(RdaChange.Type.INSERT);
 
     claim.setServTypeCd("5");
-    claim.setServTypeCdMapping(PreAdjFissClaim.ServTypeCdMapping.SpecialFacility);
+    claim.setServTypeCdMapping(RdaFissClaim.ServTypeCdMapping.SpecialFacility);
     claimBuilder.setServTypeCdForSpecialFacilitiesEnum(
         FissBillClassificationForSpecialFacilities
             .BILL_CLASSIFICATION_FOR_SPECIAL_FACILITIES_CRITICAL_ACCESS_HOSPITALS);
@@ -1793,14 +1855,14 @@ public class FissClaimTransformerTest {
     assertChangeMatches(RdaChange.Type.INSERT);
 
     claim.setServTypeCd("Z");
-    claim.setServTypeCdMapping(PreAdjFissClaim.ServTypeCdMapping.Unrecognized);
+    claim.setServTypeCdMapping(RdaFissClaim.ServTypeCdMapping.Unrecognized);
     claimBuilder.setServTypCdUnrecognized("Z");
     changeBuilder.setClaim(claimBuilder.build());
     assertChangeMatches(RdaChange.Type.INSERT);
   }
 
   private void assertChangeMatches(RdaChange.Type changeType) {
-    RdaChange<PreAdjFissClaim> changed = transformer.transformClaim(changeBuilder.build());
+    RdaChange<RdaFissClaim> changed = transformer.transformClaim(changeBuilder.build());
     assertEquals(changeType, changed.getType());
     assertThat(changed.getClaim(), samePropertyValuesAs(claim));
   }
@@ -1809,7 +1871,7 @@ public class FissClaimTransformerTest {
 
   private abstract class AbstractFieldTester<TBuilder, TEntity>
       extends ClaimTransformerFieldTester<
-          FissClaim.Builder, FissClaim, PreAdjFissClaim, TBuilder, TEntity> {
+          FissClaim.Builder, FissClaim, RdaFissClaim, TBuilder, TEntity> {
     @Override
     FissClaim.Builder createClaimBuilder() {
       return FissClaim.newBuilder()
@@ -1821,7 +1883,7 @@ public class FissClaimTransformerTest {
     }
 
     @Override
-    RdaChange<PreAdjFissClaim> transformClaim(FissClaim claim) {
+    RdaChange<RdaFissClaim> transformClaim(FissClaim claim) {
       var changeBuilder =
           FissClaimChange.newBuilder()
               .setSeq(MIN_SEQUENCE_NUM)
@@ -1836,20 +1898,20 @@ public class FissClaimTransformerTest {
     }
   }
 
-  class ClaimFieldTester extends AbstractFieldTester<FissClaim.Builder, PreAdjFissClaim> {
+  class ClaimFieldTester extends AbstractFieldTester<FissClaim.Builder, RdaFissClaim> {
     @Override
     FissClaim.Builder getTestEntityBuilder(FissClaim.Builder claimBuilder) {
       return claimBuilder;
     }
 
     @Override
-    PreAdjFissClaim getTestEntity(PreAdjFissClaim claim) {
+    RdaFissClaim getTestEntity(RdaFissClaim claim) {
       return claim;
     }
   }
 
   class AuditTrailFieldTester
-      extends AbstractFieldTester<FissAuditTrail.Builder, PreAdjFissAuditTrail> {
+      extends AbstractFieldTester<FissAuditTrail.Builder, RdaFissAuditTrail> {
     @Override
     FissAuditTrail.Builder getTestEntityBuilder(FissClaim.Builder claimBuilder) {
       if (claimBuilder.getFissAuditTrailBuilderList().isEmpty()) {
@@ -1859,9 +1921,9 @@ public class FissClaimTransformerTest {
     }
 
     @Override
-    PreAdjFissAuditTrail getTestEntity(PreAdjFissClaim claim) {
+    RdaFissAuditTrail getTestEntity(RdaFissClaim claim) {
       assertEquals(1, claim.getAuditTrail().size());
-      PreAdjFissAuditTrail answer = claim.getAuditTrail().iterator().next();
+      RdaFissAuditTrail answer = claim.getAuditTrail().iterator().next();
       assertEquals("dcn", answer.getDcn());
       assertEquals((short) 0, answer.getPriority());
       return answer;
@@ -1873,7 +1935,7 @@ public class FissClaimTransformerTest {
     }
   }
 
-  class BeneZPayerFieldTester extends AbstractFieldTester<FissBeneZPayer.Builder, PreAdjFissPayer> {
+  class BeneZPayerFieldTester extends AbstractFieldTester<FissBeneZPayer.Builder, RdaFissPayer> {
     @Override
     FissBeneZPayer.Builder getTestEntityBuilder(FissClaim.Builder claimBuilder) {
       if (claimBuilder.getFissPayersBuilderList().isEmpty()) {
@@ -1883,9 +1945,9 @@ public class FissClaimTransformerTest {
     }
 
     @Override
-    PreAdjFissPayer getTestEntity(PreAdjFissClaim claim) {
+    RdaFissPayer getTestEntity(RdaFissClaim claim) {
       assertEquals(1, claim.getPayers().size());
-      PreAdjFissPayer answer = claim.getPayers().iterator().next();
+      RdaFissPayer answer = claim.getPayers().iterator().next();
       assertEquals("dcn", answer.getDcn());
       assertEquals((short) 0, answer.getPriority());
       return answer;
@@ -1898,7 +1960,7 @@ public class FissClaimTransformerTest {
   }
 
   class InsuredPayerFieldTester
-      extends AbstractFieldTester<FissInsuredPayer.Builder, PreAdjFissPayer> {
+      extends AbstractFieldTester<FissInsuredPayer.Builder, RdaFissPayer> {
     @Override
     FissInsuredPayer.Builder getTestEntityBuilder(FissClaim.Builder claimBuilder) {
       if (claimBuilder.getFissPayersBuilderList().isEmpty()) {
@@ -1908,9 +1970,9 @@ public class FissClaimTransformerTest {
     }
 
     @Override
-    PreAdjFissPayer getTestEntity(PreAdjFissClaim claim) {
+    RdaFissPayer getTestEntity(RdaFissClaim claim) {
       assertEquals(1, claim.getPayers().size());
-      PreAdjFissPayer answer = claim.getPayers().iterator().next();
+      RdaFissPayer answer = claim.getPayers().iterator().next();
       assertEquals("dcn", answer.getDcn());
       assertEquals((short) 0, answer.getPriority());
       return answer;
@@ -1923,7 +1985,7 @@ public class FissClaimTransformerTest {
   }
 
   class ProcCodeFieldTester
-      extends AbstractFieldTester<FissProcedureCode.Builder, PreAdjFissProcCode> {
+      extends AbstractFieldTester<FissProcedureCode.Builder, RdaFissProcCode> {
     @Override
     FissProcedureCode.Builder getTestEntityBuilder(FissClaim.Builder claimBuilder) {
       if (claimBuilder.getFissProcCodesBuilderList().isEmpty()) {
@@ -1934,9 +1996,9 @@ public class FissClaimTransformerTest {
     }
 
     @Override
-    PreAdjFissProcCode getTestEntity(PreAdjFissClaim claim) {
+    RdaFissProcCode getTestEntity(RdaFissClaim claim) {
       assertEquals(1, claim.getProcCodes().size());
-      PreAdjFissProcCode answer = claim.getProcCodes().iterator().next();
+      RdaFissProcCode answer = claim.getProcCodes().iterator().next();
       assertEquals("dcn", answer.getDcn());
       assertEquals((short) 0, answer.getPriority());
       return answer;
