@@ -7,14 +7,13 @@ import static org.hamcrest.Matchers.samePropertyValuesAs;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.fail;
 
-import com.google.common.collect.ImmutableList;
 import gov.cms.bfd.model.rda.Mbi;
-import gov.cms.bfd.model.rda.PreAdjMcsAdjustment;
-import gov.cms.bfd.model.rda.PreAdjMcsAudit;
-import gov.cms.bfd.model.rda.PreAdjMcsClaim;
-import gov.cms.bfd.model.rda.PreAdjMcsDetail;
-import gov.cms.bfd.model.rda.PreAdjMcsDiagnosisCode;
-import gov.cms.bfd.model.rda.PreAdjMcsLocation;
+import gov.cms.bfd.model.rda.RdaMcsAdjustment;
+import gov.cms.bfd.model.rda.RdaMcsAudit;
+import gov.cms.bfd.model.rda.RdaMcsClaim;
+import gov.cms.bfd.model.rda.RdaMcsDetail;
+import gov.cms.bfd.model.rda.RdaMcsDiagnosisCode;
+import gov.cms.bfd.model.rda.RdaMcsLocation;
 import gov.cms.bfd.pipeline.rda.grpc.RdaChange;
 import gov.cms.bfd.pipeline.rda.grpc.sink.direct.MbiCache;
 import gov.cms.bfd.pipeline.sharedutils.IdHasher;
@@ -48,9 +47,27 @@ import java.time.Clock;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneOffset;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+/**
+ * Unit tests for the {@link McsClaimTransformer}. Unless otherwise stated on a method every test
+ * verifies that one or a set of fields within a source grpc message object for a claim have been
+ * correctly transformed into appropriate values and copied into a new {@link RdaMcsClaim} JPA
+ * entity object or one of its child objects.
+ *
+ * <p>Field tests are performed using an adaptor object appropriate for each type of grpc/jpa object
+ * pair. These adaptor objects ({@link ClaimFieldTester}, {@link AdjustmentFieldTester}, {@link
+ * AuditFieldTester}, {@link DetailFieldTester}, and {@link DiagCodeFieldTester}) extend the {@link
+ * LocationFieldTester} class and provide class specific implementations of the methods used to
+ * construct and transform objects under test.
+ *
+ * <p>Each individual field test is named after the field it tests and calls appropriate
+ * verification methods for that field. {@see ClaimTransformerFieldTester} for documentation of each
+ * of the verification methods.
+ */
 public class McsClaimTransformerTest {
   // using a fixed Clock ensures our timestamp is predictable
   private final Clock clock = Clock.fixed(Instant.ofEpochMilli(1621609413832L), ZoneOffset.UTC);
@@ -60,13 +77,13 @@ public class McsClaimTransformerTest {
       new McsClaimTransformer(clock, MbiCache.computedCache(idHasher.getConfig()));
   private McsClaimChange.Builder changeBuilder;
   private McsClaim.Builder claimBuilder;
-  private PreAdjMcsClaim claim;
+  private RdaMcsClaim claim;
 
   @BeforeEach
   public void setUp() {
     changeBuilder = McsClaimChange.newBuilder();
     claimBuilder = McsClaim.newBuilder();
-    claim = new PreAdjMcsClaim();
+    claim = new RdaMcsClaim();
     claim.setSequenceNumber(0L);
   }
 
@@ -171,7 +188,7 @@ public class McsClaimTransformerTest {
     claim.setIdrContrId("12345");
     claim.setIdrClaimType("3");
     claim.setLastUpdated(clock.instant());
-    final PreAdjMcsDetail detail = new PreAdjMcsDetail();
+    final RdaMcsDetail detail = new RdaMcsDetail();
     detail.setIdrClmHdIcn(claim.getIdrClmHdIcn());
     detail.setPriority((short) 0);
     detail.setIdrDtlStatus("F");
@@ -223,9 +240,9 @@ public class McsClaimTransformerTest {
                 .build());
     changeBuilder.setChangeType(ChangeType.CHANGE_TYPE_INSERT).setClaim(claimBuilder.build());
     assertChangeMatches(RdaChange.Type.INSERT);
-    PreAdjMcsClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
+    RdaMcsClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
     assertListContentsHaveSamePropertyValues(
-        claim.getDetails(), transformed.getDetails(), PreAdjMcsDetail::getPriority);
+        claim.getDetails(), transformed.getDetails(), RdaMcsDetail::getPriority);
   }
 
   /**
@@ -238,14 +255,14 @@ public class McsClaimTransformerTest {
     claim.setIdrContrId("12345");
     claim.setIdrClaimType("3");
     claim.setLastUpdated(clock.instant());
-    PreAdjMcsDiagnosisCode diagCode = new PreAdjMcsDiagnosisCode();
+    RdaMcsDiagnosisCode diagCode = new RdaMcsDiagnosisCode();
     diagCode.setIdrClmHdIcn(claim.getIdrClmHdIcn());
     diagCode.setPriority((short) 0);
     diagCode.setIdrDiagIcdType("9");
     diagCode.setIdrDiagCode("1234567");
     diagCode.setLastUpdated(clock.instant());
     claim.getDiagCodes().add(diagCode);
-    diagCode = new PreAdjMcsDiagnosisCode();
+    diagCode = new RdaMcsDiagnosisCode();
     diagCode.setIdrClmHdIcn(claim.getIdrClmHdIcn());
     diagCode.setPriority((short) 1);
     diagCode.setIdrDiagIcdType("0");
@@ -270,15 +287,18 @@ public class McsClaimTransformerTest {
                 .build());
     changeBuilder.setChangeType(ChangeType.CHANGE_TYPE_INSERT).setClaim(claimBuilder.build());
     assertChangeMatches(RdaChange.Type.INSERT);
-    PreAdjMcsClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
+    RdaMcsClaim transformed = transformer.transformClaim(changeBuilder.build()).getClaim();
     assertListContentsHaveSamePropertyValues(
-        claim.getDetails(), transformed.getDetails(), PreAdjMcsDetail::getPriority);
+        claim.getDetails(), transformed.getDetails(), RdaMcsDetail::getPriority);
   }
 
   @Test
   public void testMissingRequiredFieldsGenerateErrors() {
+    final long SEQUENCE_NUM = 37;
+
     try {
       changeBuilder
+          .setSeq(SEQUENCE_NUM)
           .setChangeType(ChangeType.CHANGE_TYPE_UPDATE)
           .setClaim(
               claimBuilder
@@ -288,16 +308,27 @@ public class McsClaimTransformerTest {
       transformer.transformClaim(changeBuilder.build());
       fail("should have thrown");
     } catch (DataTransformer.TransformationException ex) {
-      assertEquals(
-          ImmutableList.of(
+      List<DataTransformer.ErrorMessage> expectedErrors =
+          List.of(
               new DataTransformer.ErrorMessage(
                   "idrClmHdIcn", "invalid length: expected=[1,15] actual=0"),
               new DataTransformer.ErrorMessage(
                   "idrContrId", "invalid length: expected=[1,5] actual=0"),
               new DataTransformer.ErrorMessage("idrClaimType", "no value set"),
               new DataTransformer.ErrorMessage(
-                  "diagCode-0-idrDiagCode", "invalid length: expected=[1,7] actual=0")),
-          ex.getErrors());
+                  "diagCode-0-idrDiagCode", "invalid length: expected=[1,7] actual=0"));
+
+      String expectedMessage =
+          String.format(
+              "failed with %d errors: seq=%d clmHdIcn= errors=[%s]",
+              expectedErrors.size(),
+              SEQUENCE_NUM,
+              expectedErrors.stream()
+                  .map(DataTransformer.ErrorMessage::toString)
+                  .collect(Collectors.joining(", ")));
+
+      assertEquals(expectedMessage, ex.getMessage());
+      assertEquals(expectedErrors, ex.getErrors());
     }
   }
 
@@ -308,8 +339,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrClmHdIcn,
-            PreAdjMcsClaim::getIdrClmHdIcn,
-            PreAdjMcsClaim.Fields.idrClmHdIcn,
+            RdaMcsClaim::getIdrClmHdIcn,
+            RdaMcsClaim.Fields.idrClmHdIcn,
             15);
   }
 
@@ -318,8 +349,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrContrId,
-            PreAdjMcsClaim::getIdrContrId,
-            PreAdjMcsClaim.Fields.idrContrId,
+            RdaMcsClaim::getIdrContrId,
+            RdaMcsClaim.Fields.idrContrId,
             5);
   }
 
@@ -327,10 +358,7 @@ public class McsClaimTransformerTest {
   public void testClaimIdrHic() {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
-            McsClaim.Builder::setIdrHic,
-            PreAdjMcsClaim::getIdrHic,
-            PreAdjMcsClaim.Fields.idrHic,
-            12);
+            McsClaim.Builder::setIdrHic, RdaMcsClaim::getIdrHic, RdaMcsClaim.Fields.idrHic, 12);
   }
 
   @Test
@@ -338,13 +366,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsClaim.Builder::setIdrClaimTypeEnum,
-            PreAdjMcsClaim::getIdrClaimType,
+            RdaMcsClaim::getIdrClaimType,
             McsClaimType.CLAIM_TYPE_MEDICAL,
             "3")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsClaim.Builder::setIdrClaimTypeUnrecognized,
-            PreAdjMcsClaim::getIdrClaimType,
-            PreAdjMcsClaim.Fields.idrClaimType,
+            RdaMcsClaim::getIdrClaimType,
+            RdaMcsClaim.Fields.idrClaimType,
             1);
   }
 
@@ -353,8 +381,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrBeneLast16,
-            PreAdjMcsClaim::getIdrBeneLast_1_6,
-            PreAdjMcsClaim.Fields.idrBeneLast_1_6,
+            RdaMcsClaim::getIdrBeneLast_1_6,
+            RdaMcsClaim.Fields.idrBeneLast_1_6,
             6);
   }
 
@@ -363,8 +391,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrBeneFirstInit,
-            PreAdjMcsClaim::getIdrBeneFirstInit,
-            PreAdjMcsClaim.Fields.idrBeneFirstInit,
+            RdaMcsClaim::getIdrBeneFirstInit,
+            RdaMcsClaim.Fields.idrBeneFirstInit,
             1);
   }
 
@@ -373,8 +401,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrBeneMidInit,
-            PreAdjMcsClaim::getIdrBeneMidInit,
-            PreAdjMcsClaim.Fields.idrBeneMidInit,
+            RdaMcsClaim::getIdrBeneMidInit,
+            RdaMcsClaim.Fields.idrBeneMidInit,
             1);
   }
 
@@ -383,13 +411,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsClaim.Builder::setIdrBeneSexEnum,
-            PreAdjMcsClaim::getIdrBeneSex,
+            RdaMcsClaim::getIdrBeneSex,
             McsBeneficiarySex.BENEFICIARY_SEX_MALE,
             "M")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsClaim.Builder::setIdrBeneSexUnrecognized,
-            PreAdjMcsClaim::getIdrBeneSex,
-            PreAdjMcsClaim.Fields.idrBeneSex,
+            RdaMcsClaim::getIdrBeneSex,
+            RdaMcsClaim.Fields.idrBeneSex,
             1);
   }
 
@@ -398,16 +426,14 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsClaim.Builder::setIdrStatusCodeEnum,
-            PreAdjMcsClaim::getIdrStatusCode,
+            RdaMcsClaim::getIdrStatusCode,
             McsStatusCode.STATUS_CODE_DENIED_E,
             "E")
         .verifyEnumFieldTransformationRejectsUnrecognizedValue(
-            McsClaim.Builder::setIdrStatusCodeUnrecognized,
-            PreAdjMcsClaim.Fields.idrStatusCode,
-            "ZZZ")
+            McsClaim.Builder::setIdrStatusCodeUnrecognized, RdaMcsClaim.Fields.idrStatusCode, "ZZZ")
         .verifyEnumFieldTransformationRejectsSpecificValues(
             McsClaim.Builder::setIdrStatusCodeEnum,
-            PreAdjMcsClaim.Fields.idrStatusCode,
+            RdaMcsClaim.Fields.idrStatusCode,
             McsStatusCode.STATUS_CODE_NOT_USED);
   }
 
@@ -416,8 +442,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             McsClaim.Builder::setIdrStatusDate,
-            PreAdjMcsClaim::getIdrStatusDate,
-            PreAdjMcsClaim.Fields.idrStatusDate);
+            RdaMcsClaim::getIdrStatusDate,
+            RdaMcsClaim.Fields.idrStatusDate);
   }
 
   @Test
@@ -425,8 +451,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrBillProvNpi,
-            PreAdjMcsClaim::getIdrBillProvNpi,
-            PreAdjMcsClaim.Fields.idrBillProvNpi,
+            RdaMcsClaim::getIdrBillProvNpi,
+            RdaMcsClaim.Fields.idrBillProvNpi,
             10);
   }
 
@@ -435,8 +461,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrBillProvNum,
-            PreAdjMcsClaim::getIdrBillProvNum,
-            PreAdjMcsClaim.Fields.idrBillProvNum,
+            RdaMcsClaim::getIdrBillProvNum,
+            RdaMcsClaim.Fields.idrBillProvNum,
             10);
   }
 
@@ -445,8 +471,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrBillProvEin,
-            PreAdjMcsClaim::getIdrBillProvEin,
-            PreAdjMcsClaim.Fields.idrBillProvEin,
+            RdaMcsClaim::getIdrBillProvEin,
+            RdaMcsClaim.Fields.idrBillProvEin,
             10);
   }
 
@@ -455,8 +481,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrBillProvType,
-            PreAdjMcsClaim::getIdrBillProvType,
-            PreAdjMcsClaim.Fields.idrBillProvType,
+            RdaMcsClaim::getIdrBillProvType,
+            RdaMcsClaim.Fields.idrBillProvType,
             2);
   }
 
@@ -465,8 +491,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrBillProvSpec,
-            PreAdjMcsClaim::getIdrBillProvSpec,
-            PreAdjMcsClaim.Fields.idrBillProvSpec,
+            RdaMcsClaim::getIdrBillProvSpec,
+            RdaMcsClaim.Fields.idrBillProvSpec,
             2);
   }
 
@@ -475,13 +501,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsClaim.Builder::setIdrBillProvGroupIndEnum,
-            PreAdjMcsClaim::getIdrBillProvGroupInd,
+            RdaMcsClaim::getIdrBillProvGroupInd,
             McsBillingProviderIndicator.BILLING_PROVIDER_INDICATOR_GROUP,
             "G")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsClaim.Builder::setIdrBillProvGroupIndUnrecognized,
-            PreAdjMcsClaim::getIdrBillProvGroupInd,
-            PreAdjMcsClaim.Fields.idrBillProvGroupInd,
+            RdaMcsClaim::getIdrBillProvGroupInd,
+            RdaMcsClaim.Fields.idrBillProvGroupInd,
             1);
   }
 
@@ -490,8 +516,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrBillProvPriceSpec,
-            PreAdjMcsClaim::getIdrBillProvPriceSpec,
-            PreAdjMcsClaim.Fields.idrBillProvPriceSpec,
+            RdaMcsClaim::getIdrBillProvPriceSpec,
+            RdaMcsClaim.Fields.idrBillProvPriceSpec,
             2);
   }
 
@@ -500,8 +526,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrBillProvCounty,
-            PreAdjMcsClaim::getIdrBillProvCounty,
-            PreAdjMcsClaim.Fields.idrBillProvCounty,
+            RdaMcsClaim::getIdrBillProvCounty,
+            RdaMcsClaim.Fields.idrBillProvCounty,
             2);
   }
 
@@ -510,8 +536,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrBillProvLoc,
-            PreAdjMcsClaim::getIdrBillProvLoc,
-            PreAdjMcsClaim.Fields.idrBillProvLoc,
+            RdaMcsClaim::getIdrBillProvLoc,
+            RdaMcsClaim.Fields.idrBillProvLoc,
             2);
   }
 
@@ -520,8 +546,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyAmountStringFieldTransformedCorrectly(
             McsClaim.Builder::setIdrTotAllowed,
-            PreAdjMcsClaim::getIdrTotAllowed,
-            PreAdjMcsClaim.Fields.idrTotAllowed);
+            RdaMcsClaim::getIdrTotAllowed,
+            RdaMcsClaim.Fields.idrTotAllowed);
   }
 
   @Test
@@ -529,8 +555,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyAmountStringFieldTransformedCorrectly(
             McsClaim.Builder::setIdrCoinsurance,
-            PreAdjMcsClaim::getIdrCoinsurance,
-            PreAdjMcsClaim.Fields.idrCoinsurance);
+            RdaMcsClaim::getIdrCoinsurance,
+            RdaMcsClaim.Fields.idrCoinsurance);
   }
 
   @Test
@@ -538,8 +564,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyAmountStringFieldTransformedCorrectly(
             McsClaim.Builder::setIdrDeductible,
-            PreAdjMcsClaim::getIdrDeductible,
-            PreAdjMcsClaim.Fields.idrDeductible);
+            RdaMcsClaim::getIdrDeductible,
+            RdaMcsClaim.Fields.idrDeductible);
   }
 
   @Test
@@ -547,13 +573,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsClaim.Builder::setIdrBillProvStatusCdEnum,
-            PreAdjMcsClaim::getIdrBillProvStatusCd,
+            RdaMcsClaim::getIdrBillProvStatusCd,
             McsBillingProviderStatusCode.BILLING_PROVIDER_STATUS_CODE_NON_PARTICIPATING,
             "N")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsClaim.Builder::setIdrBillProvStatusCdUnrecognized,
-            PreAdjMcsClaim::getIdrBillProvStatusCd,
-            PreAdjMcsClaim.Fields.idrBillProvStatusCd,
+            RdaMcsClaim::getIdrBillProvStatusCd,
+            RdaMcsClaim.Fields.idrBillProvStatusCd,
             1);
   }
 
@@ -562,8 +588,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyAmountStringFieldTransformedCorrectly(
             McsClaim.Builder::setIdrTotBilledAmt,
-            PreAdjMcsClaim::getIdrTotBilledAmt,
-            PreAdjMcsClaim.Fields.idrTotBilledAmt);
+            RdaMcsClaim::getIdrTotBilledAmt,
+            RdaMcsClaim.Fields.idrTotBilledAmt);
   }
 
   @Test
@@ -571,8 +597,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             McsClaim.Builder::setIdrClaimReceiptDate,
-            PreAdjMcsClaim::getIdrClaimReceiptDate,
-            PreAdjMcsClaim.Fields.idrClaimReceiptDate);
+            RdaMcsClaim::getIdrClaimReceiptDate,
+            RdaMcsClaim.Fields.idrClaimReceiptDate);
   }
 
   @Test
@@ -580,11 +606,11 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrClaimMbi,
-            PreAdjMcsClaim::getIdrClaimMbi,
-            PreAdjMcsClaim.Fields.idrClaimMbi,
+            RdaMcsClaim::getIdrClaimMbi,
+            RdaMcsClaim.Fields.idrClaimMbi,
             11)
         .verifyIdHashFieldPopulatedCorrectly(
-            McsClaim.Builder::setIdrClaimMbi, PreAdjMcsClaim::getIdrClaimMbiHash, 11, idHasher);
+            McsClaim.Builder::setIdrClaimMbi, RdaMcsClaim::getIdrClaimMbiHash, 11, idHasher);
   }
 
   @Test
@@ -592,8 +618,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             McsClaim.Builder::setIdrHdrFromDos,
-            PreAdjMcsClaim::getIdrHdrFromDateOfSvc,
-            PreAdjMcsClaim.Fields.idrHdrFromDateOfSvc);
+            RdaMcsClaim::getIdrHdrFromDateOfSvc,
+            RdaMcsClaim.Fields.idrHdrFromDateOfSvc);
   }
 
   @Test
@@ -601,8 +627,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             McsClaim.Builder::setIdrHdrToDos,
-            PreAdjMcsClaim::getIdrHdrToDateOfSvc,
-            PreAdjMcsClaim.Fields.idrHdrToDateOfSvc);
+            RdaMcsClaim::getIdrHdrToDateOfSvc,
+            RdaMcsClaim.Fields.idrHdrToDateOfSvc);
   }
 
   @Test
@@ -610,13 +636,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsClaim.Builder::setIdrAssignmentEnum,
-            PreAdjMcsClaim::getIdrAssignment,
+            RdaMcsClaim::getIdrAssignment,
             McsClaimAssignmentCode.CLAIM_ASSIGNMENT_CODE,
             "A")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsClaim.Builder::setIdrAssignmentUnrecognized,
-            PreAdjMcsClaim::getIdrAssignment,
-            PreAdjMcsClaim.Fields.idrAssignment,
+            RdaMcsClaim::getIdrAssignment,
+            RdaMcsClaim.Fields.idrAssignment,
             1);
   }
 
@@ -625,13 +651,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsClaim.Builder::setIdrClmLevelIndEnum,
-            PreAdjMcsClaim::getIdrClmLevelInd,
+            RdaMcsClaim::getIdrClmLevelInd,
             McsClaimLevelIndicator.CLAIM_LEVEL_INDICATOR_ORIGINAL,
             "O")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsClaim.Builder::setIdrClmLevelIndUnrecognized,
-            PreAdjMcsClaim::getIdrClmLevelInd,
-            PreAdjMcsClaim.Fields.idrClmLevelInd,
+            RdaMcsClaim::getIdrClmLevelInd,
+            RdaMcsClaim.Fields.idrClmLevelInd,
             1);
   }
 
@@ -639,7 +665,7 @@ public class McsClaimTransformerTest {
   public void testClaimIdrHdrAudit() {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyIntFieldCopiedCorrectly(
-            McsClaim.Builder::setIdrHdrAudit, PreAdjMcsClaim::getIdrHdrAudit);
+            McsClaim.Builder::setIdrHdrAudit, RdaMcsClaim::getIdrHdrAudit);
   }
 
   @Test
@@ -647,13 +673,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsClaim.Builder::setIdrHdrAuditIndEnum,
-            PreAdjMcsClaim::getIdrHdrAuditInd,
+            RdaMcsClaim::getIdrHdrAuditInd,
             McsAuditIndicator.AUDIT_INDICATOR_AUDIT_NUMBER,
             "A")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsClaim.Builder::setIdrHdrAuditIndUnrecognized,
-            PreAdjMcsClaim::getIdrHdrAuditInd,
-            PreAdjMcsClaim.Fields.idrHdrAuditInd,
+            RdaMcsClaim::getIdrHdrAuditInd,
+            RdaMcsClaim.Fields.idrHdrAuditInd,
             1);
   }
 
@@ -662,13 +688,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsClaim.Builder::setIdrUSplitReasonEnum,
-            PreAdjMcsClaim::getIdrUSplitReason,
+            RdaMcsClaim::getIdrUSplitReason,
             McsSplitReasonCode.SPLIT_REASON_CODE_GHI_SPLIT,
             "4")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsClaim.Builder::setIdrUSplitReasonUnrecognized,
-            PreAdjMcsClaim::getIdrUSplitReason,
-            PreAdjMcsClaim.Fields.idrUSplitReason,
+            RdaMcsClaim::getIdrUSplitReason,
+            RdaMcsClaim.Fields.idrUSplitReason,
             1);
   }
 
@@ -677,8 +703,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrJReferringProvNpi,
-            PreAdjMcsClaim::getIdrJReferringProvNpi,
-            PreAdjMcsClaim.Fields.idrJReferringProvNpi,
+            RdaMcsClaim::getIdrJReferringProvNpi,
+            RdaMcsClaim.Fields.idrJReferringProvNpi,
             10);
   }
 
@@ -687,8 +713,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrJFacProvNpi,
-            PreAdjMcsClaim::getIdrJFacProvNpi,
-            PreAdjMcsClaim.Fields.idrJFacProvNpi,
+            RdaMcsClaim::getIdrJFacProvNpi,
+            RdaMcsClaim.Fields.idrJFacProvNpi,
             10);
   }
 
@@ -697,8 +723,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrUDemoProvNpi,
-            PreAdjMcsClaim::getIdrUDemoProvNpi,
-            PreAdjMcsClaim.Fields.idrUDemoProvNpi,
+            RdaMcsClaim::getIdrUDemoProvNpi,
+            RdaMcsClaim.Fields.idrUDemoProvNpi,
             10);
   }
 
@@ -707,8 +733,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrUSuperNpi,
-            PreAdjMcsClaim::getIdrUSuperNpi,
-            PreAdjMcsClaim.Fields.idrUSuperNpi,
+            RdaMcsClaim::getIdrUSuperNpi,
+            RdaMcsClaim.Fields.idrUSuperNpi,
             10);
   }
 
@@ -717,8 +743,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrUFcadjBilNpi,
-            PreAdjMcsClaim::getIdrUFcadjBilNpi,
-            PreAdjMcsClaim.Fields.idrUFcadjBilNpi,
+            RdaMcsClaim::getIdrUFcadjBilNpi,
+            RdaMcsClaim.Fields.idrUFcadjBilNpi,
             10);
   }
 
@@ -727,8 +753,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrAmbPickupAddresLine1,
-            PreAdjMcsClaim::getIdrAmbPickupAddresLine1,
-            PreAdjMcsClaim.Fields.idrAmbPickupAddresLine1,
+            RdaMcsClaim::getIdrAmbPickupAddresLine1,
+            RdaMcsClaim.Fields.idrAmbPickupAddresLine1,
             25);
   }
 
@@ -737,8 +763,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrAmbPickupAddresLine2,
-            PreAdjMcsClaim::getIdrAmbPickupAddresLine2,
-            PreAdjMcsClaim.Fields.idrAmbPickupAddresLine2,
+            RdaMcsClaim::getIdrAmbPickupAddresLine2,
+            RdaMcsClaim.Fields.idrAmbPickupAddresLine2,
             20);
   }
 
@@ -747,8 +773,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrAmbPickupCity,
-            PreAdjMcsClaim::getIdrAmbPickupCity,
-            PreAdjMcsClaim.Fields.idrAmbPickupCity,
+            RdaMcsClaim::getIdrAmbPickupCity,
+            RdaMcsClaim.Fields.idrAmbPickupCity,
             20);
   }
 
@@ -757,8 +783,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrAmbPickupState,
-            PreAdjMcsClaim::getIdrAmbPickupState,
-            PreAdjMcsClaim.Fields.idrAmbPickupState,
+            RdaMcsClaim::getIdrAmbPickupState,
+            RdaMcsClaim.Fields.idrAmbPickupState,
             2);
   }
 
@@ -767,8 +793,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrAmbPickupZipcode,
-            PreAdjMcsClaim::getIdrAmbPickupZipcode,
-            PreAdjMcsClaim.Fields.idrAmbPickupZipcode,
+            RdaMcsClaim::getIdrAmbPickupZipcode,
+            RdaMcsClaim.Fields.idrAmbPickupZipcode,
             9);
   }
 
@@ -777,8 +803,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrAmbDropoffName,
-            PreAdjMcsClaim::getIdrAmbDropoffName,
-            PreAdjMcsClaim.Fields.idrAmbDropoffName,
+            RdaMcsClaim::getIdrAmbDropoffName,
+            RdaMcsClaim.Fields.idrAmbDropoffName,
             24);
   }
 
@@ -787,8 +813,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrAmbDropoffAddrLine1,
-            PreAdjMcsClaim::getIdrAmbDropoffAddrLine1,
-            PreAdjMcsClaim.Fields.idrAmbDropoffAddrLine1,
+            RdaMcsClaim::getIdrAmbDropoffAddrLine1,
+            RdaMcsClaim.Fields.idrAmbDropoffAddrLine1,
             25);
   }
 
@@ -797,8 +823,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrAmbDropoffAddrLine2,
-            PreAdjMcsClaim::getIdrAmbDropoffAddrLine2,
-            PreAdjMcsClaim.Fields.idrAmbDropoffAddrLine2,
+            RdaMcsClaim::getIdrAmbDropoffAddrLine2,
+            RdaMcsClaim.Fields.idrAmbDropoffAddrLine2,
             20);
   }
 
@@ -807,8 +833,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrAmbDropoffCity,
-            PreAdjMcsClaim::getIdrAmbDropoffCity,
-            PreAdjMcsClaim.Fields.idrAmbDropoffCity,
+            RdaMcsClaim::getIdrAmbDropoffCity,
+            RdaMcsClaim.Fields.idrAmbDropoffCity,
             20);
   }
 
@@ -817,8 +843,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrAmbDropoffState,
-            PreAdjMcsClaim::getIdrAmbDropoffState,
-            PreAdjMcsClaim.Fields.idrAmbDropoffState,
+            RdaMcsClaim::getIdrAmbDropoffState,
+            RdaMcsClaim.Fields.idrAmbDropoffState,
             2);
   }
 
@@ -827,8 +853,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.ClaimFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsClaim.Builder::setIdrAmbDropoffZipcode,
-            PreAdjMcsClaim::getIdrAmbDropoffZipcode,
-            PreAdjMcsClaim.Fields.idrAmbDropoffZipcode,
+            RdaMcsClaim::getIdrAmbDropoffZipcode,
+            RdaMcsClaim.Fields.idrAmbDropoffZipcode,
             9);
   }
 
@@ -841,8 +867,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.AdjustmentFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             McsAdjustment.Builder::setIdrAdjDate,
-            PreAdjMcsAdjustment::getIdrAdjDate,
-            PreAdjMcsAdjustment.Fields.idrAdjDate);
+            RdaMcsAdjustment::getIdrAdjDate,
+            RdaMcsAdjustment.Fields.idrAdjDate);
   }
 
   @Test
@@ -850,8 +876,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.AdjustmentFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsAdjustment.Builder::setIdrXrefIcn,
-            PreAdjMcsAdjustment::getIdrXrefIcn,
-            PreAdjMcsAdjustment.Fields.idrXrefIcn,
+            RdaMcsAdjustment::getIdrXrefIcn,
+            RdaMcsAdjustment.Fields.idrXrefIcn,
             15);
   }
 
@@ -860,8 +886,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.AdjustmentFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsAdjustment.Builder::setIdrAdjClerk,
-            PreAdjMcsAdjustment::getIdrAdjClerk,
-            PreAdjMcsAdjustment.Fields.idrAdjClerk,
+            RdaMcsAdjustment::getIdrAdjClerk,
+            RdaMcsAdjustment.Fields.idrAdjClerk,
             4);
   }
 
@@ -870,8 +896,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.AdjustmentFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsAdjustment.Builder::setIdrInitCcn,
-            PreAdjMcsAdjustment::getIdrInitCcn,
-            PreAdjMcsAdjustment.Fields.idrInitCcn,
+            RdaMcsAdjustment::getIdrInitCcn,
+            RdaMcsAdjustment.Fields.idrInitCcn,
             15);
   }
 
@@ -880,8 +906,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.AdjustmentFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             McsAdjustment.Builder::setIdrAdjChkWrtDt,
-            PreAdjMcsAdjustment::getIdrAdjChkWrtDt,
-            PreAdjMcsAdjustment.Fields.idrAdjChkWrtDt);
+            RdaMcsAdjustment::getIdrAdjChkWrtDt,
+            RdaMcsAdjustment.Fields.idrAdjChkWrtDt);
   }
 
   @Test
@@ -889,8 +915,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.AdjustmentFieldTester()
         .verifyAmountStringFieldTransformedCorrectly(
             McsAdjustment.Builder::setIdrAdjBEombAmt,
-            PreAdjMcsAdjustment::getIdrAdjBEombAmt,
-            PreAdjMcsAdjustment.Fields.idrAdjBEombAmt);
+            RdaMcsAdjustment::getIdrAdjBEombAmt,
+            RdaMcsAdjustment.Fields.idrAdjBEombAmt);
   }
 
   @Test
@@ -898,8 +924,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.AdjustmentFieldTester()
         .verifyAmountStringFieldTransformedCorrectly(
             McsAdjustment.Builder::setIdrAdjPEombAmt,
-            PreAdjMcsAdjustment::getIdrAdjPEombAmt,
-            PreAdjMcsAdjustment.Fields.idrAdjPEombAmt);
+            RdaMcsAdjustment::getIdrAdjPEombAmt,
+            RdaMcsAdjustment.Fields.idrAdjPEombAmt);
   }
 
   // endregion McsAdjustments
@@ -910,7 +936,7 @@ public class McsClaimTransformerTest {
   public void testAuditIdrJAuditNum() {
     new McsClaimTransformerTest.AuditFieldTester()
         .verifyIntFieldCopiedCorrectly(
-            McsAudit.Builder::setIdrJAuditNum, PreAdjMcsAudit::getIdrJAuditNum);
+            McsAudit.Builder::setIdrJAuditNum, RdaMcsAudit::getIdrJAuditNum);
   }
 
   @Test
@@ -918,13 +944,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.AuditFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsAudit.Builder::setIdrJAuditIndEnum,
-            PreAdjMcsAudit::getIdrJAuditInd,
+            RdaMcsAudit::getIdrJAuditInd,
             McsCutbackAuditIndicator.CUTBACK_AUDIT_INDICATOR_AUDIT_NUMBER,
             "A")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsAudit.Builder::setIdrJAuditIndUnrecognized,
-            PreAdjMcsAudit::getIdrJAuditInd,
-            PreAdjMcsAudit.Fields.idrJAuditInd,
+            RdaMcsAudit::getIdrJAuditInd,
+            RdaMcsAudit.Fields.idrJAuditInd,
             1);
   }
 
@@ -933,13 +959,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.AuditFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsAudit.Builder::setIdrJAuditDispEnum,
-            PreAdjMcsAudit::getIdrJAuditDisp,
+            RdaMcsAudit::getIdrJAuditDisp,
             McsCutbackAuditDisposition.CUTBACK_AUDIT_DISPOSITION_ADS_LETTER,
             "S")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsAudit.Builder::setIdrJAuditDispUnrecognized,
-            PreAdjMcsAudit::getIdrJAuditDisp,
-            PreAdjMcsAudit.Fields.idrJAuditDisp,
+            RdaMcsAudit::getIdrJAuditDisp,
+            RdaMcsAudit.Fields.idrJAuditDisp,
             1);
   }
 
@@ -952,8 +978,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DiagCodeFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDiagnosisCode.Builder::setIdrDiagCode,
-            PreAdjMcsDiagnosisCode::getIdrDiagCode,
-            PreAdjMcsDiagnosisCode.Fields.idrDiagCode,
+            RdaMcsDiagnosisCode::getIdrDiagCode,
+            RdaMcsDiagnosisCode.Fields.idrDiagCode,
             7);
   }
 
@@ -962,13 +988,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DiagCodeFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsDiagnosisCode.Builder::setIdrDiagIcdTypeEnum,
-            PreAdjMcsDiagnosisCode::getIdrDiagIcdType,
+            RdaMcsDiagnosisCode::getIdrDiagIcdType,
             McsDiagnosisIcdType.DIAGNOSIS_ICD_TYPE_ICD9,
             "9")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsDiagnosisCode.Builder::setIdrDiagIcdTypeUnrecognized,
-            PreAdjMcsDiagnosisCode::getIdrDiagIcdType,
-            PreAdjMcsDiagnosisCode.Fields.idrDiagIcdType,
+            RdaMcsDiagnosisCode::getIdrDiagIcdType,
+            RdaMcsDiagnosisCode.Fields.idrDiagIcdType,
             1);
   }
 
@@ -980,13 +1006,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsDetail.Builder::setIdrDtlStatusEnum,
-            PreAdjMcsDetail::getIdrDtlStatus,
+            RdaMcsDetail::getIdrDtlStatus,
             McsDetailStatus.DETAIL_STATUS_FINAL,
             "F")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsDetail.Builder::setIdrDtlStatusUnrecognized,
-            PreAdjMcsDetail::getIdrDtlStatus,
-            PreAdjMcsDetail.Fields.idrDtlStatus,
+            RdaMcsDetail::getIdrDtlStatus,
+            RdaMcsDetail.Fields.idrDtlStatus,
             1);
   }
 
@@ -995,8 +1021,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             McsDetail.Builder::setIdrDtlFromDate,
-            PreAdjMcsDetail::getIdrDtlFromDate,
-            PreAdjMcsDetail.Fields.idrDtlFromDate);
+            RdaMcsDetail::getIdrDtlFromDate,
+            RdaMcsDetail.Fields.idrDtlFromDate);
   }
 
   @Test
@@ -1004,8 +1030,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             McsDetail.Builder::setIdrDtlToDate,
-            PreAdjMcsDetail::getIdrDtlToDate,
-            PreAdjMcsDetail.Fields.idrDtlToDate);
+            RdaMcsDetail::getIdrDtlToDate,
+            RdaMcsDetail.Fields.idrDtlToDate);
   }
 
   @Test
@@ -1013,8 +1039,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrProcCode,
-            PreAdjMcsDetail::getIdrProcCode,
-            PreAdjMcsDetail.Fields.idrProcCode,
+            RdaMcsDetail::getIdrProcCode,
+            RdaMcsDetail.Fields.idrProcCode,
             5);
   }
 
@@ -1023,8 +1049,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrModOne,
-            PreAdjMcsDetail::getIdrModOne,
-            PreAdjMcsDetail.Fields.idrModOne,
+            RdaMcsDetail::getIdrModOne,
+            RdaMcsDetail.Fields.idrModOne,
             2);
   }
 
@@ -1033,8 +1059,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrModTwo,
-            PreAdjMcsDetail::getIdrModTwo,
-            PreAdjMcsDetail.Fields.idrModTwo,
+            RdaMcsDetail::getIdrModTwo,
+            RdaMcsDetail.Fields.idrModTwo,
             2);
   }
 
@@ -1043,8 +1069,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrModThree,
-            PreAdjMcsDetail::getIdrModThree,
-            PreAdjMcsDetail.Fields.idrModThree,
+            RdaMcsDetail::getIdrModThree,
+            RdaMcsDetail.Fields.idrModThree,
             2);
   }
 
@@ -1053,8 +1079,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrModFour,
-            PreAdjMcsDetail::getIdrModFour,
-            PreAdjMcsDetail.Fields.idrModFour,
+            RdaMcsDetail::getIdrModFour,
+            RdaMcsDetail.Fields.idrModFour,
             2);
   }
 
@@ -1063,13 +1089,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsDetail.Builder::setIdrDtlDiagIcdTypeEnum,
-            PreAdjMcsDetail::getIdrDtlDiagIcdType,
+            RdaMcsDetail::getIdrDtlDiagIcdType,
             McsDiagnosisIcdType.DIAGNOSIS_ICD_TYPE_ICD10,
             "0")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsDetail.Builder::setIdrDtlDiagIcdTypeUnrecognized,
-            PreAdjMcsDetail::getIdrDtlDiagIcdType,
-            PreAdjMcsDetail.Fields.idrDtlDiagIcdType,
+            RdaMcsDetail::getIdrDtlDiagIcdType,
+            RdaMcsDetail.Fields.idrDtlDiagIcdType,
             1);
   }
 
@@ -1078,8 +1104,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlPrimaryDiagCode,
-            PreAdjMcsDetail::getIdrDtlPrimaryDiagCode,
-            PreAdjMcsDetail.Fields.idrDtlPrimaryDiagCode,
+            RdaMcsDetail::getIdrDtlPrimaryDiagCode,
+            RdaMcsDetail.Fields.idrDtlPrimaryDiagCode,
             7);
   }
 
@@ -1088,8 +1114,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrKPosLnameOrg,
-            PreAdjMcsDetail::getIdrKPosLnameOrg,
-            PreAdjMcsDetail.Fields.idrKPosLnameOrg,
+            RdaMcsDetail::getIdrKPosLnameOrg,
+            RdaMcsDetail.Fields.idrKPosLnameOrg,
             60);
   }
 
@@ -1098,8 +1124,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrKPosFname,
-            PreAdjMcsDetail::getIdrKPosFname,
-            PreAdjMcsDetail.Fields.idrKPosFname,
+            RdaMcsDetail::getIdrKPosFname,
+            RdaMcsDetail.Fields.idrKPosFname,
             35);
   }
 
@@ -1108,8 +1134,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrKPosMname,
-            PreAdjMcsDetail::getIdrKPosMname,
-            PreAdjMcsDetail.Fields.idrKPosMname,
+            RdaMcsDetail::getIdrKPosMname,
+            RdaMcsDetail.Fields.idrKPosMname,
             25);
   }
 
@@ -1118,8 +1144,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrKPosAddr1,
-            PreAdjMcsDetail::getIdrKPosAddr1,
-            PreAdjMcsDetail.Fields.idrKPosAddr1,
+            RdaMcsDetail::getIdrKPosAddr1,
+            RdaMcsDetail.Fields.idrKPosAddr1,
             55);
   }
 
@@ -1128,8 +1154,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrKPosAddr21St,
-            PreAdjMcsDetail::getIdrKPosAddr2_1st,
-            PreAdjMcsDetail.Fields.idrKPosAddr2_1st,
+            RdaMcsDetail::getIdrKPosAddr2_1st,
+            RdaMcsDetail.Fields.idrKPosAddr2_1st,
             30);
   }
 
@@ -1138,8 +1164,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrKPosAddr22Nd,
-            PreAdjMcsDetail::getIdrKPosAddr2_2nd,
-            PreAdjMcsDetail.Fields.idrKPosAddr2_2nd,
+            RdaMcsDetail::getIdrKPosAddr2_2nd,
+            RdaMcsDetail.Fields.idrKPosAddr2_2nd,
             25);
   }
 
@@ -1148,8 +1174,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrKPosCity,
-            PreAdjMcsDetail::getIdrKPosCity,
-            PreAdjMcsDetail.Fields.idrKPosCity,
+            RdaMcsDetail::getIdrKPosCity,
+            RdaMcsDetail.Fields.idrKPosCity,
             30);
   }
 
@@ -1158,8 +1184,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrKPosState,
-            PreAdjMcsDetail::getIdrKPosState,
-            PreAdjMcsDetail.Fields.idrKPosState,
+            RdaMcsDetail::getIdrKPosState,
+            RdaMcsDetail.Fields.idrKPosState,
             2);
   }
 
@@ -1168,8 +1194,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrKPosZip,
-            PreAdjMcsDetail::getIdrKPosZip,
-            PreAdjMcsDetail.Fields.idrKPosZip,
+            RdaMcsDetail::getIdrKPosZip,
+            RdaMcsDetail.Fields.idrKPosZip,
             15);
   }
 
@@ -1178,13 +1204,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsDetail.Builder::setIdrTosEnum,
-            PreAdjMcsDetail::getIdrTos,
+            RdaMcsDetail::getIdrTos,
             McsTypeOfService.TYPE_OF_SERVICE_ANESTHESIA,
             "7")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsDetail.Builder::setIdrTosUnrecognized,
-            PreAdjMcsDetail::getIdrTos,
-            PreAdjMcsDetail.Fields.idrTos,
+            RdaMcsDetail::getIdrTos,
+            RdaMcsDetail.Fields.idrTos,
             1);
   }
 
@@ -1193,13 +1219,13 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsDetail.Builder::setIdrTwoDigitPosEnum,
-            PreAdjMcsDetail::getIdrTwoDigitPos,
+            RdaMcsDetail::getIdrTwoDigitPos,
             McsTwoDigitPlanOfService.TWO_DIGIT_PLAN_OF_SERVICE_AMBULANCE_LAND,
             "41")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsDetail.Builder::setIdrTwoDigitPosUnrecognized,
-            PreAdjMcsDetail::getIdrTwoDigitPos,
-            PreAdjMcsDetail.Fields.idrTwoDigitPos,
+            RdaMcsDetail::getIdrTwoDigitPos,
+            RdaMcsDetail.Fields.idrTwoDigitPos,
             2);
   }
 
@@ -1208,8 +1234,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlRendType,
-            PreAdjMcsDetail::getIdrDtlRendType,
-            PreAdjMcsDetail.Fields.idrDtlRendType,
+            RdaMcsDetail::getIdrDtlRendType,
+            RdaMcsDetail.Fields.idrDtlRendType,
             2);
   }
 
@@ -1218,8 +1244,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlRendSpec,
-            PreAdjMcsDetail::getIdrDtlRendSpec,
-            PreAdjMcsDetail.Fields.idrDtlRendSpec,
+            RdaMcsDetail::getIdrDtlRendSpec,
+            RdaMcsDetail.Fields.idrDtlRendSpec,
             2);
   }
 
@@ -1228,8 +1254,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlRendNpi,
-            PreAdjMcsDetail::getIdrDtlRendNpi,
-            PreAdjMcsDetail.Fields.idrDtlRendNpi,
+            RdaMcsDetail::getIdrDtlRendNpi,
+            RdaMcsDetail.Fields.idrDtlRendNpi,
             10);
   }
 
@@ -1238,8 +1264,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlRendProv,
-            PreAdjMcsDetail::getIdrDtlRendProv,
-            PreAdjMcsDetail.Fields.idrDtlRendProv,
+            RdaMcsDetail::getIdrDtlRendProv,
+            RdaMcsDetail.Fields.idrDtlRendProv,
             10);
   }
 
@@ -1248,8 +1274,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrKDtlFacProvNpi,
-            PreAdjMcsDetail::getIdrKDtlFacProvNpi,
-            PreAdjMcsDetail.Fields.idrKDtlFacProvNpi,
+            RdaMcsDetail::getIdrKDtlFacProvNpi,
+            RdaMcsDetail.Fields.idrKDtlFacProvNpi,
             10);
   }
 
@@ -1258,8 +1284,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlAmbPickupAddres1,
-            PreAdjMcsDetail::getIdrDtlAmbPickupAddres1,
-            PreAdjMcsDetail.Fields.idrDtlAmbPickupAddres1,
+            RdaMcsDetail::getIdrDtlAmbPickupAddres1,
+            RdaMcsDetail.Fields.idrDtlAmbPickupAddres1,
             25);
   }
 
@@ -1268,8 +1294,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlAmbPickupAddres2,
-            PreAdjMcsDetail::getIdrDtlAmbPickupAddres2,
-            PreAdjMcsDetail.Fields.idrDtlAmbPickupAddres2,
+            RdaMcsDetail::getIdrDtlAmbPickupAddres2,
+            RdaMcsDetail.Fields.idrDtlAmbPickupAddres2,
             20);
   }
 
@@ -1278,8 +1304,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlAmbPickupCity,
-            PreAdjMcsDetail::getIdrDtlAmbPickupCity,
-            PreAdjMcsDetail.Fields.idrDtlAmbPickupCity,
+            RdaMcsDetail::getIdrDtlAmbPickupCity,
+            RdaMcsDetail.Fields.idrDtlAmbPickupCity,
             20);
   }
 
@@ -1288,8 +1314,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlAmbPickupState,
-            PreAdjMcsDetail::getIdrDtlAmbPickupState,
-            PreAdjMcsDetail.Fields.idrDtlAmbPickupState,
+            RdaMcsDetail::getIdrDtlAmbPickupState,
+            RdaMcsDetail.Fields.idrDtlAmbPickupState,
             2);
   }
 
@@ -1298,8 +1324,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlAmbPickupZipcode,
-            PreAdjMcsDetail::getIdrDtlAmbPickupZipcode,
-            PreAdjMcsDetail.Fields.idrDtlAmbPickupZipcode,
+            RdaMcsDetail::getIdrDtlAmbPickupZipcode,
+            RdaMcsDetail.Fields.idrDtlAmbPickupZipcode,
             9);
   }
 
@@ -1308,8 +1334,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlAmbDropoffName,
-            PreAdjMcsDetail::getIdrDtlAmbDropoffName,
-            PreAdjMcsDetail.Fields.idrDtlAmbDropoffName,
+            RdaMcsDetail::getIdrDtlAmbDropoffName,
+            RdaMcsDetail.Fields.idrDtlAmbDropoffName,
             24);
   }
 
@@ -1318,8 +1344,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlAmbDropoffAddrL1,
-            PreAdjMcsDetail::getIdrDtlAmbDropoffAddrL1,
-            PreAdjMcsDetail.Fields.idrDtlAmbDropoffAddrL1,
+            RdaMcsDetail::getIdrDtlAmbDropoffAddrL1,
+            RdaMcsDetail.Fields.idrDtlAmbDropoffAddrL1,
             25);
   }
 
@@ -1328,8 +1354,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlAmbDropoffAddrL2,
-            PreAdjMcsDetail::getIdrDtlAmbDropoffAddrL2,
-            PreAdjMcsDetail.Fields.idrDtlAmbDropoffAddrL2,
+            RdaMcsDetail::getIdrDtlAmbDropoffAddrL2,
+            RdaMcsDetail.Fields.idrDtlAmbDropoffAddrL2,
             20);
   }
 
@@ -1338,8 +1364,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlAmbDropoffCity,
-            PreAdjMcsDetail::getIdrDtlAmbDropoffCity,
-            PreAdjMcsDetail.Fields.idrDtlAmbDropoffCity,
+            RdaMcsDetail::getIdrDtlAmbDropoffCity,
+            RdaMcsDetail.Fields.idrDtlAmbDropoffCity,
             20);
   }
 
@@ -1348,8 +1374,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlAmbDropoffState,
-            PreAdjMcsDetail::getIdrDtlAmbDropoffState,
-            PreAdjMcsDetail.Fields.idrDtlAmbDropoffState,
+            RdaMcsDetail::getIdrDtlAmbDropoffState,
+            RdaMcsDetail.Fields.idrDtlAmbDropoffState,
             2);
   }
 
@@ -1358,8 +1384,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.DetailFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsDetail.Builder::setIdrDtlAmbDropoffZipcode,
-            PreAdjMcsDetail::getIdrDtlAmbDropoffZipcode,
-            PreAdjMcsDetail.Fields.idrDtlAmbDropoffZipcode,
+            RdaMcsDetail::getIdrDtlAmbDropoffZipcode,
+            RdaMcsDetail.Fields.idrDtlAmbDropoffZipcode,
             9);
   }
 
@@ -1372,8 +1398,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.LocationFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsLocation.Builder::setIdrLocClerk,
-            PreAdjMcsLocation::getIdrLocClerk,
-            PreAdjMcsLocation.Fields.idrLocClerk,
+            RdaMcsLocation::getIdrLocClerk,
+            RdaMcsLocation.Fields.idrLocClerk,
             4);
   }
 
@@ -1382,8 +1408,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.LocationFieldTester()
         .verifyStringFieldCopiedCorrectly(
             McsLocation.Builder::setIdrLocCode,
-            PreAdjMcsLocation::getIdrLocCode,
-            PreAdjMcsLocation.Fields.idrLocCode,
+            RdaMcsLocation::getIdrLocCode,
+            RdaMcsLocation.Fields.idrLocCode,
             3);
   }
 
@@ -1392,8 +1418,8 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.LocationFieldTester()
         .verifyDateStringFieldTransformedCorrectly(
             McsLocation.Builder::setIdrLocDate,
-            PreAdjMcsLocation::getIdrLocDate,
-            PreAdjMcsLocation.Fields.idrLocDate);
+            RdaMcsLocation::getIdrLocDate,
+            RdaMcsLocation.Fields.idrLocDate);
   }
 
   @Test
@@ -1401,20 +1427,20 @@ public class McsClaimTransformerTest {
     new McsClaimTransformerTest.LocationFieldTester()
         .verifyEnumFieldStringValueExtractedCorrectly(
             McsLocation.Builder::setIdrLocActvCodeEnum,
-            PreAdjMcsLocation::getIdrLocActvCode,
+            RdaMcsLocation::getIdrLocActvCode,
             McsLocationActivityCode.LOCATION_ACTIVITY_CODE_CAS_ACTIVITY,
             "Q")
         .verifyStringFieldCopiedCorrectlyEmptyOK(
             McsLocation.Builder::setIdrLocActvCodeUnrecognized,
-            PreAdjMcsLocation::getIdrLocActvCode,
-            PreAdjMcsLocation.Fields.idrLocActvCode,
+            RdaMcsLocation::getIdrLocActvCode,
+            RdaMcsLocation.Fields.idrLocActvCode,
             1);
   }
 
   // endregion McsLocation
 
   private void assertChangeMatches(RdaChange.Type changeType) {
-    RdaChange<PreAdjMcsClaim> changed = transformer.transformClaim(changeBuilder.build());
+    RdaChange<RdaMcsClaim> changed = transformer.transformClaim(changeBuilder.build());
     assertEquals(changeType, changed.getType());
     assertThat(changed.getClaim(), samePropertyValuesAs(claim));
   }
@@ -1423,7 +1449,7 @@ public class McsClaimTransformerTest {
 
   private abstract class AbstractFieldTester<TBuilder, TEntity>
       extends ClaimTransformerFieldTester<
-          McsClaim.Builder, McsClaim, PreAdjMcsClaim, TBuilder, TEntity> {
+          McsClaim.Builder, McsClaim, RdaMcsClaim, TBuilder, TEntity> {
     @Override
     McsClaim.Builder createClaimBuilder() {
       return McsClaim.newBuilder()
@@ -1433,7 +1459,7 @@ public class McsClaimTransformerTest {
     }
 
     @Override
-    RdaChange<PreAdjMcsClaim> transformClaim(McsClaim claim) {
+    RdaChange<RdaMcsClaim> transformClaim(McsClaim claim) {
       var changeBuilder =
           McsClaimChange.newBuilder()
               .setSeq(MIN_SEQUENCE_NUM)
@@ -1449,21 +1475,20 @@ public class McsClaimTransformerTest {
   }
 
   private class ClaimFieldTester
-      extends McsClaimTransformerTest.AbstractFieldTester<McsClaim.Builder, PreAdjMcsClaim> {
+      extends McsClaimTransformerTest.AbstractFieldTester<McsClaim.Builder, RdaMcsClaim> {
     @Override
     McsClaim.Builder getTestEntityBuilder(McsClaim.Builder claimBuilder) {
       return claimBuilder;
     }
 
     @Override
-    PreAdjMcsClaim getTestEntity(PreAdjMcsClaim claim) {
+    RdaMcsClaim getTestEntity(RdaMcsClaim claim) {
       return claim;
     }
   }
 
   class AdjustmentFieldTester
-      extends McsClaimTransformerTest.AbstractFieldTester<
-          McsAdjustment.Builder, PreAdjMcsAdjustment> {
+      extends McsClaimTransformerTest.AbstractFieldTester<McsAdjustment.Builder, RdaMcsAdjustment> {
     @Override
     McsAdjustment.Builder getTestEntityBuilder(McsClaim.Builder claimBuilder) {
       if (claimBuilder.getMcsAdjustmentsBuilderList().isEmpty()) {
@@ -1473,9 +1498,9 @@ public class McsClaimTransformerTest {
     }
 
     @Override
-    PreAdjMcsAdjustment getTestEntity(PreAdjMcsClaim claim) {
+    RdaMcsAdjustment getTestEntity(RdaMcsClaim claim) {
       assertEquals(1, claim.getAdjustments().size());
-      PreAdjMcsAdjustment answer = claim.getAdjustments().iterator().next();
+      RdaMcsAdjustment answer = claim.getAdjustments().iterator().next();
       assertEquals("idrClmHdIcn", answer.getIdrClmHdIcn());
       assertEquals((short) 0, answer.getPriority());
       return answer;
@@ -1488,7 +1513,7 @@ public class McsClaimTransformerTest {
   }
 
   class AuditFieldTester
-      extends McsClaimTransformerTest.AbstractFieldTester<McsAudit.Builder, PreAdjMcsAudit> {
+      extends McsClaimTransformerTest.AbstractFieldTester<McsAudit.Builder, RdaMcsAudit> {
     @Override
     McsAudit.Builder getTestEntityBuilder(McsClaim.Builder claimBuilder) {
       if (claimBuilder.getMcsAuditsBuilderList().isEmpty()) {
@@ -1498,9 +1523,9 @@ public class McsClaimTransformerTest {
     }
 
     @Override
-    PreAdjMcsAudit getTestEntity(PreAdjMcsClaim claim) {
+    RdaMcsAudit getTestEntity(RdaMcsClaim claim) {
       assertEquals(1, claim.getAudits().size());
-      PreAdjMcsAudit answer = claim.getAudits().iterator().next();
+      RdaMcsAudit answer = claim.getAudits().iterator().next();
       assertEquals("idrClmHdIcn", answer.getIdrClmHdIcn());
       assertEquals((short) 0, answer.getPriority());
       return answer;
@@ -1513,7 +1538,7 @@ public class McsClaimTransformerTest {
   }
 
   class DetailFieldTester
-      extends McsClaimTransformerTest.AbstractFieldTester<McsDetail.Builder, PreAdjMcsDetail> {
+      extends McsClaimTransformerTest.AbstractFieldTester<McsDetail.Builder, RdaMcsDetail> {
     @Override
     McsDetail.Builder getTestEntityBuilder(McsClaim.Builder claimBuilder) {
       if (claimBuilder.getMcsDetailsBuilderList().isEmpty()) {
@@ -1523,9 +1548,9 @@ public class McsClaimTransformerTest {
     }
 
     @Override
-    PreAdjMcsDetail getTestEntity(PreAdjMcsClaim claim) {
+    RdaMcsDetail getTestEntity(RdaMcsClaim claim) {
       assertEquals(1, claim.getDetails().size());
-      PreAdjMcsDetail answer = claim.getDetails().iterator().next();
+      RdaMcsDetail answer = claim.getDetails().iterator().next();
       assertEquals("idrClmHdIcn", answer.getIdrClmHdIcn());
       assertEquals((short) 0, answer.getPriority());
       return answer;
@@ -1539,7 +1564,7 @@ public class McsClaimTransformerTest {
 
   class DiagCodeFieldTester
       extends McsClaimTransformerTest.AbstractFieldTester<
-          McsDiagnosisCode.Builder, PreAdjMcsDiagnosisCode> {
+          McsDiagnosisCode.Builder, RdaMcsDiagnosisCode> {
     @Override
     McsDiagnosisCode.Builder getTestEntityBuilder(McsClaim.Builder claimBuilder) {
       if (claimBuilder.getMcsDiagnosisCodesBuilderList().isEmpty()) {
@@ -1550,9 +1575,9 @@ public class McsClaimTransformerTest {
     }
 
     @Override
-    PreAdjMcsDiagnosisCode getTestEntity(PreAdjMcsClaim claim) {
+    RdaMcsDiagnosisCode getTestEntity(RdaMcsClaim claim) {
       assertEquals(1, claim.getDiagCodes().size());
-      PreAdjMcsDiagnosisCode answer = claim.getDiagCodes().iterator().next();
+      RdaMcsDiagnosisCode answer = claim.getDiagCodes().iterator().next();
       assertEquals("idrClmHdIcn", answer.getIdrClmHdIcn());
       assertEquals((short) 0, answer.getPriority());
       return answer;
@@ -1565,7 +1590,7 @@ public class McsClaimTransformerTest {
   }
 
   class LocationFieldTester
-      extends McsClaimTransformerTest.AbstractFieldTester<McsLocation.Builder, PreAdjMcsLocation> {
+      extends McsClaimTransformerTest.AbstractFieldTester<McsLocation.Builder, RdaMcsLocation> {
     @Override
     McsLocation.Builder getTestEntityBuilder(McsClaim.Builder claimBuilder) {
       if (claimBuilder.getMcsLocationsBuilderList().isEmpty()) {
@@ -1575,9 +1600,9 @@ public class McsClaimTransformerTest {
     }
 
     @Override
-    PreAdjMcsLocation getTestEntity(PreAdjMcsClaim claim) {
+    RdaMcsLocation getTestEntity(RdaMcsClaim claim) {
       assertEquals(1, claim.getLocations().size());
-      PreAdjMcsLocation answer = claim.getLocations().iterator().next();
+      RdaMcsLocation answer = claim.getLocations().iterator().next();
       assertEquals("idrClmHdIcn", answer.getIdrClmHdIcn());
       assertEquals((short) 0, answer.getPriority());
       return answer;
