@@ -13,9 +13,11 @@ import gov.cms.bfd.model.rif.SNFClaim;
 import gov.cms.bfd.model.rif.samples.StaticRifResource;
 import gov.cms.bfd.model.rif.samples.StaticRifResourceGroup;
 import gov.cms.bfd.server.war.ServerTestUtils;
+import gov.cms.bfd.server.war.commons.FdaDrugCodeDisplayLookup;
 import gov.cms.bfd.server.war.commons.MedicareSegment;
 import gov.cms.bfd.server.war.commons.ProfileConstants;
 import gov.cms.bfd.server.war.commons.TransformerConstants;
+import gov.cms.bfd.server.war.commons.TransformerContext;
 import java.text.SimpleDateFormat;
 import java.time.Instant;
 import java.util.ArrayList;
@@ -40,6 +42,7 @@ import org.hl7.fhir.r4.model.Extension;
 import org.hl7.fhir.r4.model.Identifier;
 import org.hl7.fhir.r4.model.Money;
 import org.hl7.fhir.r4.model.Organization;
+import org.hl7.fhir.r4.model.Quantity;
 import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.Resource;
 import org.hl7.fhir.r4.model.UnsignedIntType;
@@ -76,7 +79,12 @@ public final class HospiceClaimTransformerV2Test {
 
   private void createEOB(Optional<Boolean> includeTaxNumber) {
     ExplanationOfBenefit genEob =
-        HospiceClaimTransformerV2.transform(new MetricRegistry(), claim, includeTaxNumber);
+        HospiceClaimTransformerV2.transform(
+            new TransformerContext(
+                new MetricRegistry(),
+                includeTaxNumber,
+                FdaDrugCodeDisplayLookup.createDrugCodeLookupForTesting()),
+            claim);
     IParser parser = fhirContext.newJsonParser();
     String json = parser.encodeResourceToString(genEob);
     eob = parser.parseResource(ExplanationOfBenefit.class, json);
@@ -106,7 +114,12 @@ public final class HospiceClaimTransformerV2Test {
   public void transformSampleARecord() throws FHIRException {
     assertMatches(
         claim,
-        HospiceClaimTransformerV2.transform(new MetricRegistry(), claim, Optional.of(false)));
+        HospiceClaimTransformerV2.transform(
+            new TransformerContext(
+                new MetricRegistry(),
+                Optional.of(false),
+                FdaDrugCodeDisplayLookup.createDrugCodeLookupForTesting()),
+            claim));
   }
 
   /** Common top level ExplanationOfBenefit values */
@@ -230,7 +243,12 @@ public final class HospiceClaimTransformerV2Test {
   @Test
   public void shouldHaveExtensions() {
     List<Extension> expected = eob.getExtension();
-    assertEquals(4, expected.size());
+    assertEquals(6, expected.size());
+
+    assertNotNull(
+        TransformerTestUtilsV2.findExtensionByUrl(
+            "https://bluebutton.cms.gov/resources/variables/fi_doc_clm_cntl_num",
+            eob.getExtension()));
 
     assertNotNull(
         TransformerTestUtilsV2.findExtensionByUrl(
@@ -247,14 +265,31 @@ public final class HospiceClaimTransformerV2Test {
             "https://bluebutton.cms.gov/resources/variables/clm_srvc_clsfctn_type_cd",
             eob.getExtension()));
 
+    assertNotNull(
+        TransformerTestUtilsV2.findExtensionByUrl(
+            "https://bluebutton.cms.gov/resources/variables/bene_hospc_prd_cnt",
+            eob.getExtension()));
+
+    Extension hospiceCountExtension =
+        new Extension(
+            "https://bluebutton.cms.gov/resources/variables/bene_hospc_prd_cnt",
+            new Coding(
+                "https://bluebutton.cms.gov/resources/variables/bene_hospc_prd_cnt", null, null));
+    hospiceCountExtension.setValue(new Quantity(2));
+
     List<Extension> compare =
-        Arrays.asList(
+        List.of(
             new Extension(
                 "https://bluebutton.cms.gov/resources/variables/nch_near_line_rec_ident_cd",
                 new Coding(
                     "https://bluebutton.cms.gov/resources/variables/nch_near_line_rec_ident_cd",
                     "V",
                     "Part A institutional claim record (inpatient [IP], skilled nursing facility [SNF], hospice [HOS], or home health agency [HHA])")),
+            new Extension(
+                "https://bluebutton.cms.gov/resources/variables/fi_doc_clm_cntl_num",
+                new Identifier()
+                    .setSystem("https://bluebutton.cms.gov/resources/variables/fi_doc_clm_cntl_num")
+                    .setValue("2718813985998")),
             new Extension(
                 "https://bluebutton.cms.gov/resources/variables/clm_mdcr_non_pmt_rsn_cd",
                 new Coding(
@@ -269,7 +304,8 @@ public final class HospiceClaimTransformerV2Test {
                     null)),
             new Extension(
                 "https://bluebutton.cms.gov/resources/variables/fi_num",
-                new Coding("https://bluebutton.cms.gov/resources/variables/fi_num", "6666", null)));
+                new Coding("https://bluebutton.cms.gov/resources/variables/fi_num", "6666", null)),
+            hospiceCountExtension);
 
     for (int i = 0; i < expected.size(); i++) {
       assertTrue(compare.get(i).equalsDeep(expected.get(i)));
@@ -488,12 +524,15 @@ public final class HospiceClaimTransformerV2Test {
   /** Insurance */
   @Test
   public void shouldReferenceCoverageInInsurance() {
-    // Only one insurance object
+    //     // Only one insurance object if there is more than we need to fix the focal set to point
+    // to the correct insurance
+    assertEquals(false, eob.getInsurance().size() > 1);
     assertEquals(1, eob.getInsurance().size());
 
     InsuranceComponent insurance = eob.getInsuranceFirstRep();
     InsuranceComponent compare =
         new InsuranceComponent()
+            .setFocal(true)
             .setCoverage(new Reference().setReference("Coverage/part-a-567834"));
 
     assertTrue(compare.equalsDeep(insurance));
